--- a/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="تغيير الحجم (أساسي - أسرع)"
 COM_KUNENA_RESIZE_INTERPOLATION="استيفاء (أفضل - أسرع)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (أفضل - أبطأ)"
 COM_KUNENA_A_ASK_EMAIL="البريد الالكتروني مطلوب"
-COM_KUNENA_A_ASK_EMAIL_DESC="طلب عنوان البريد الالكتروني عند قيام المستخدمين أو الزوار بإدراج مشاركات. حدد على <em>لا </em> إذا كنت ترغب بتخطي هذه الخاصية في واجهة المنتدى. المشاركون لن يطلب منهم عنوان بريدهم الالكتروني."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="الحد الاقصي من المرفقات"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="الحد  الاقصي من عدد المرفقات في المحرر."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="حماية المرفقات"
