--- a/components/com_kunena/admin/language/ca-ES/ca-ES.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ca-ES/ca-ES.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Qualitat de l'avatar"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Requereix correu electrònic"
-COM_KUNENA_A_ASK_EMAIL_DESC="Requereix una direcció de correu electrònic quan els usuaris/es o els visitants publiquin un tema. Configura a <em>No</em>, si desitges que aquesta característica sigui omesa a la interfície pública. No es demanarà la direcció de correu electrònic als creadors de temes."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Límit d'adjunts"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Nombre límit d'adjunts en l'editor."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
