--- a/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Resize (Basal - Hurtigere)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Bedre - Hurtigere)"
 COM_KUNENA_RESIZE_BICUBIC="Bikubisk (Bedst - Langsommere)"
 COM_KUNENA_A_ASK_EMAIL="Kræv email"
-COM_KUNENA_A_ASK_EMAIL_DESC="Kræv en emailadresse når brugere eller gæster laver et indlæg. Sæt til <em>Nej</em> hvis du vil have at denne funktion undlades på frontend. Skribenter vil ikke blive afkrævet deres email adresse."
+COM_KUNENA_A_ASK_EMAIL_DESC="Kræv en emailadresse når gæster laver et indlæg. Sæt til <em>Nej</em> hvis du vil have at denne funktion undlades på frontend. Skribenter vil ikke blive afkrævet deres email adresse."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Begræns bilag"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Begræns antallet af bilag i editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Beskyt vedhæftninger"
