--- a/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Ποιότητα Εικόνας Avatar"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Απαίτηση E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Να απαιτείται η συμπλήρωση μιας διεύθυνσης e-mail όταν τα μέλη ή οι επισκέπτες αποστέλλουν μια δημοσίευση. Επιλέξτε <em>Όχι</em> αν θέλετε να απενεργοποιήσετε τη ρύθμιση αυτή. Δεν θα ζητείται από τους αποστολείς να συμπληρώσουν τη διεύθυνση e-mail τους"
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Περιορισμός Συνημμένων"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Περιορισμός του αριθμού των συνημμένων στον επεξεργαστή κειμένου."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
