--- a/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.install.ini
+++ b/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.install.ini
@@ -76,7 +76,7 @@ COM_KUNENA_INSTALL_REINSTALL_HINT="Kasuta seda valikut, et paigaldada uuesti pra
 COM_KUNENA_INSTALL_RENAMING_FAIL="Faili ümbernimetamine"
 COM_KUNENA_INSTALL_RESTORE="Taasta varukoopia"
 COM_KUNENA_INSTALL_RESTORE_DESC="Taasta komponendi #COMPONENT_OLD# #VERSION_OLD# varukoopiast."
-; COM_KUNENA_INSTALL_RESTORE_HINT="The installer found a backup from #COMPONENT_OLD# #VERSION_OLD#. This option restores old data and uninstalls Kunena #VERSION#. After taking this action, you must re-install your old version along with your template, language, and any custom changes."
+COM_KUNENA_INSTALL_RESTORE_HINT="Paigaldaja leidis #COMPONENT_OLD# #VERSION_OLD# varukoopia. See valik taastab vanad andmed ja eemaldab Kunena #VERSION#. Pärast selle toimingu tegemist pead sa oma vana versiooni taas paigaldama koos oma kujunduse keelte ja kohandatud muudatustega."
 COM_KUNENA_INSTALL_RESTORE_WARN="Kõik uued andmed lähevad kaduma."
 COM_KUNENA_INSTALL_SAMPLEDATA="Paigalda näidisinfo"
 COM_KUNENA_INSTALL_STEP_COMPLETE="Paigaldamine on lõpetatud"
@@ -93,7 +93,7 @@ COM_KUNENA_INSTALL_UNINSTALL_WARN="See tegevus kustutab sinu foorumist kõik and
 COM_KUNENA_INSTALL_UPGRADE="Uuenda Kunenat"
 COM_KUNENA_INSTALL_UPGRADE_DESC="Uuenda Kunena versioonilt #VERSION_OLD# versioonile #VERSION#."
 COM_KUNENA_INSTALL_UPGRADE_HINT="Kasuta seda valikut, et uuendada Kunena #VERSION_OLD# praegusele versioonile."
-; COM_KUNENA_INSTALL_UPGRADE_WARN="If you have already installed Kunena #VERSION# and then later decided to downgrade back to #COMPONENT_OLD# #VERSION_OLD#, any new messages since the upgrade will not be imported using this option. Please <em>migrate</em> your old version instead."
+COM_KUNENA_INSTALL_UPGRADE_WARN="Sul on juba paigaldatud Kunena #VERSION# ja seejärel sa paigaldasid vanema versiooni #COMPONENT_OLD# #VERSION_OLD# ning selle valikuga ei impordita pärast uuendusi tehtud postitusi. Palun kasuta hoopis <em>migrate</em> funktsiooni."
 COM_KUNENA_INSTALL_VERSION_UPGRADED="Andmebaas uuendatud versioonile %s"
 COM_KUNENA_MENU_FORUM_ALIAS="foorum"
 COM_KUNENA_MENU_HELP_ALIAS="abiinfo"
