--- a/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.views.ini
@@ -11,23 +11,23 @@
 
 ; JROOT/administrator/components/com_kunena/views/
 
-; COM_KUNENA_ATTACHMENTS_VIEW="Attachments"
+COM_KUNENA_ATTACHMENTS_VIEW="Lisatud failid"
 COM_KUNENA_A_AVATARS="Avatarid"
 COM_KUNENA_A_BASIC_SETTINGS="Peamised seaded"
-; COM_KUNENA_A_RANK_MANAGER="Ranks"
+COM_KUNENA_A_RANK_MANAGER="Tiitlid"
 COM_KUNENA_A_START_UPLOAD="Alusta üleslaadimist"
-; COM_KUNENA_A_TEMPLATE_MANAGER="Templates"
-; COM_KUNENA_A_TOPICICONS_MANAGER="Topic Icons"
-; COM_KUNENA_A_VIEW_TOOLS="Tools"
+COM_KUNENA_A_TEMPLATE_MANAGER="Kujundused"
+COM_KUNENA_A_TOPICICONS_MANAGER="Teema ikoonid"
+COM_KUNENA_A_VIEW_TOOLS="Töövahendid"
 COM_KUNENA_EMOTICONS_CODE="Kood"
-; COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emoticons"
+COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emotikonid"
 COM_KUNENA_GEN_DELETE="Kustuta"
 COM_KUNENA_RANKS="Tiitli nimi"
 COM_KUNENA_REPORT_SYSTEM="Aruannete seadistamine"
 COM_KUNENA_STATS_GEN_STATS="Üldine statistika"
 COM_KUNENA_TRASH_AUTHOR_USERID="Kasutaja Id"
 COM_KUNENA_TRASH_IP="IP"
-; COM_KUNENA_TRASH_VIEW="Trashbin"
+COM_KUNENA_TRASH_VIEW="Prügikast"
 COM_KUNENA_USRL_USERNAME="Kasutajanimi"
 COM_KUNENA_FIELD_LABEL_SEARCH="Otsing"
 COM_KUNENA_FIELD_LABEL_SEARCHIN="Otsi"
@@ -47,7 +47,7 @@ COM_KUNENA_TABLEHEAD_OPTION="Vastusevariant"
 COM_KUNENA_TABLEHEAD_DESCRIPTION="Kirjeldus"
 COM_KUNENA_FIELD_INPUT_SEARCH="Otsing"
 COM_KUNENA_FILTERACTIVE="Pole ühtegi kirjet, mida näidata."
-; COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Tools"
+COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Töövahendid"
 COM_KUNENA_FIELD_LABEL_UNPUBLISHED="Peidetud"
 COM_KUNENA_FIELD_LABEL_PUBLISHED="Nähtav"
 COM_KUNENA_FIELD_LABEL_ARCHIVED="Arhiveeritud"
@@ -65,10 +65,10 @@ COM_KUNENA_ATTACHMENTS_FIELD_LABEL_SIZE="Suurus"
 COM_KUNENA_ATTACHMENTS_FIELD_LABEL_MESSAGE="Sõnum"
 
 ; JROOT/administrator/components/com_kunena/views
-; COM_KUNENA_C_FORUM="Categories"
+COM_KUNENA_C_FORUM="Kategooriad"
 COM_KUNENA_C_KCONFIG="Foorumi seadistamine"
 COM_KUNENA_C_SUPPORT="Klienditoe sait"
-; COM_KUNENA_C_USER="Users"
+COM_KUNENA_C_USER="Kasutajad"
 
 ; JROOT/administrator/components/com_kunena/views/categories/
 COM_KUNENA_NEW_CATEGORY="Uus kategooria"
@@ -84,9 +84,9 @@ COM_KUNENA_USRL_NAME="Kasutajanimi"
 COM_KUNENA_A_CATEGORY_CFG_TAB_DISPLAY="Näitamise seaded"
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_INDEX_LEGEND="Indeks"
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT="Näita seda kategooriat"
-; COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT_DESC="Display this category in the main Category Index page. There are three levels to be shown: sections, categories and sub-categories."
+COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT_DESC="Näita seda kategooriat kategooriate pealehel. Seal on kolm taset: sektsioonid, kategooriad ja alamkategooriad."
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN="Näita alamkategooriaid"
-; COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN_DESC="Display children of this category inside the main Category Index page. This setting overrides the previous setting of all the children if it's set to be more restrictive."
+COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN_DESC="Näita selle kategooria alamkategooriaid kategooriate pealehel. See kirjutab üle alamkategooriate varasemad seaded, kui need on olnud piiravamad."
 COM_KUNENA_A_CATEGORY_CFG_OPTION_NEVER="Mitte kunagi kategooriate indeksis"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SECTION="Üles sektsiooni tasemele"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_CATEGORY="Üles kategooria tasemele"
@@ -105,7 +105,7 @@ COM_KUNENA_CATEGORIES_LABEL_POLL="Küsitlusi"
 
 COM_KUNENA_CP="Kunena juhtpaneel"
 COM_KUNENA_MENU_DESC_DASHBOARD="Töölaud"
-; COM_KUNENA_MENU_DESC_FILEMANAGER="Attachments"
+COM_KUNENA_MENU_DESC_FILEMANAGER="Lisatud failid"
 COM_KUNENA_MENU_DESC_CONFIGURATION="Seadistamine"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/default.php
@@ -147,11 +147,11 @@ COM_KUNENA_RESIZE_RESIZE="Muuda suurust (Lihtne - kiirem)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpoleerimine (Parem - Kiire)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Parem - Aeglasem)"
 COM_KUNENA_A_ASK_EMAIL="E-post on kohustuslik"
-COM_KUNENA_A_ASK_EMAIL_DESC="Kui registreerumata kasutajad postitavad, siis peavad nad sisestama ka oma e-posti aadressi. Kui sa soovid, et postitaja käest e-posti aadressi ei küsita, siis vali siin &quot;Ei&quot.."
+COM_KUNENA_A_ASK_EMAIL_DESC="Kui registreerumata kasutajad postitavad, siis peavad nad sisestama ka oma e-posti aadressi. Kui sa soovid, et postitaja käest e-posti aadressi ei küsita, siis vali siin <em>Ei</em>."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Manuste piiramised"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Määra manuste limiit redaktoris."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Manuste kaitsmine"
-; COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="Protect attachment files from direct access by entering URLs like <em>%s</em>. This feature enables access control and removes most restrictions on filenames. Changing this option has no effect on existing filenames."
+COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="kaitse lisatud faile otse ligipääsemise eest sisestades linke nagu <em>%s</em>. See funktsioon võimaldab hallata ligipääsu ning eemaldab enamikud piirangud failinimedelt. Selle valiku muutmine ei mõjuta olemasolevaid failinimesid."
 COM_KUNENA_A_ATTACHMENTS="Lisatud failid"
 COM_KUNENA_A_AUTOEMBEDEBAY="eBay kirjete automaatne põimimine"
 COM_KUNENA_A_AUTOEMBEDEBAY_DESC="Vali <em>Jah</em> kui sa soovid, et eBay kirjed ja otsingud põimitakse automaatselt."
@@ -502,7 +502,7 @@ COM_KUNENA_CFG_SEARCH_DATE_YESTERDAY="Eile"
 COM_KUNENA_TEASER="Peida vastused külaliste eest"
 COM_KUNENA_TEASER_DESC="Kui see on sisse lülitatud, siis kasutajad peavad enne vastuste lugemist sisse logima."
 COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="eBay AppID võti"
-; COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on your ebay developer account, you need to register on https://go.developer.ebay.com/ in order to get the AppID"
+COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="Sa pead sisestama AppID, mis sulle ebay arendaja kontolt anti. AppID saamiseks pead sa pead registreeruma saidil https://go.developer.ebay.com/"
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_LABEL="Twitteri kliendi võti"
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_DESC="Twitteri kliendi võti API-ga ühendumiseks"
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="Twitteri kliendi salasõna"
@@ -572,7 +572,7 @@ COM_KUNENA_RANKSIMAGE="Tiitli pilt"
 COM_KUNENA_RANKSMIN="Minimaalne postituste arv"
 COM_KUNENA_RANKS_SPECIAL="Eritiitel"
 COM_KUNENA_RANKS_LABEL_TITLE="Pealkiri"
-; COM_KUNENA_RANKS_FIELD_INPUT_SEARCHRANKS="Search ranks"
+COM_KUNENA_RANKS_FIELD_INPUT_SEARCHRANKS="Otsi tiitleid"
 
 ; JROOT/administrator/components/com_kunena/views/ranks/tmpl/add.php
 
@@ -604,7 +604,7 @@ COM_KUNENA_A_EMOTICONS="Emotikonid"
 COM_KUNENA_A_EMOTICONS_UPLOAD="Lae üles uus emotikon"
 COM_KUNENA_EMOTICON="Emotikon"
 COM_KUNENA_EMOTICONS_FIELD_LABEL_ID="ID"
-; COM_KUNENA_SMILIES_FIELD_INPUT_SEARCHSMILIES="Search smilies"
+COM_KUNENA_SMILIES_FIELD_INPUT_SEARCHSMILIES="Otsi emotikone"
 
 ; JROOT/administrator/components/com_kunena/views/smilies/view.html.php
 
@@ -722,7 +722,7 @@ COM_KUNENA_TRASHED="Prügikastis"
 COM_KUNENA_A_PRUNE="Foorumite puhastamine"
 COM_KUNENA_A_PRUNE_CONTROL_OPTIONS="Kärbi ainult"
 COM_KUNENA_A_PRUNE_DAYS="päeva"
-; COM_KUNENA_A_PRUNE_DESC="The Prune Categories function allows you to prune topics where there have not been any new posts during the specified number of days."
+COM_KUNENA_A_PRUNE_DESC="Kategooriate puhastamise funktsioon võimaldab kustutada teemasid, kuhu pole määratud päevade jooksul postitusi tehtud."
 COM_KUNENA_A_PRUNE_KEEP_STICKY="Hoia kleepekaga teemasid"
 COM_KUNENA_A_PRUNE_NAME="Puhastatav foorum:"
 COM_KUNENA_A_PRUNE_NOPOSTS="Kustuta teemad, milles pole postitusi viimased"
@@ -835,7 +835,7 @@ COM_KUNENA_GEN_SIGNATURE="Allkiri"
 
 ; JROOT/administrator/components/com_kunena/views/users/tmpl/default.php
 
-; COM_KUNENA_FUM="Users"
+COM_KUNENA_FUM="Kasutajad"
 COM_KUNENA_GEN_USERGROUP="Grupp"
 COM_KUNENA_NOUSERSFOUND="Kasutajaprofiile ei leitud."
 COM_KUNENA_USRL_BANNED="Bännitud"
@@ -909,8 +909,8 @@ COM_KUNENA_DIAGNOSTICS_LABEL_DELETE_BROKEN_ITEMS="KUSTUTA KATKISED KIRJED"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Eemalda Kunena"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="HOIATUS!"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Jätka ettevaatlikult. See toiming on pöördumatu ja kustutab selle Kunena foorumi jäädavalt."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="All user data in the database including categories, topics, messages, and attachments will be deleted. Kunena installation directories will be removed from you Joomla install including the Kunena Site Component, Kunena Administrator Component, and Kunena Library. If you don't have a backup there is no way to go back and restore this data."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="In order to execute the process, you need to log in with a super-administrator account. If you have Two-Factor Authentication enabled you may need to include the authenticator code to proceed."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="Kõik kasutaja andmed andmebaasis nagu kategooriad, teemad, sõnumid ja lisatud failid kustutatakse. Kunena kaustad eemaldatakse Joomla! saidilt. Kaasa arvatud Kunena komponent ja Kunena teek. Kui sul pole neist varukoopiaid, siis pole mitte mingit võimalust neid andmeid hiljem enam taastada."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="Selle protsessi käivitamiseks pead sa sisse logima super adminitraatorina. Kui sul on kahe-etapiline autentimine sisse lülitatud, siis on võimalik, et sa pead jätkamiseks sisestama ka autentimiskoodi."
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_LOGIN="Kasutajanimi"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_PASSWORD="Parool"
 COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="Käivita protsess"
