--- a/components/com_kunena/admin/language/fr-FR/fr-FR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/fr-FR/fr-FR.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Redimensionner (Base - Rapide)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Conseillé - Rapide)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Meilleur - Lent)"
 COM_KUNENA_A_ASK_EMAIL="Afficher l'adresse de courriel"
-COM_KUNENA_A_ASK_EMAIL_DESC="Vous pouvez exiger une adresse de courriel quand un utilisateur ou un visiteur poste un message.<br /> Sélectionnez <font color=#FF0000><b>Non</b></font> si vous ne souhaitez pas de cette option dans l'interface utilisateur : les adresses de courriel ne seront pas demandées aux auteurs de messages."
+COM_KUNENA_A_ASK_EMAIL_DESC="Vous pouvez exiger une adresse de courriel quand un utilisateur ou un visiteur poste un message. Sélectionnez <em>Non</em> si vous ne souhaitez pas de cette option dans l'interface utilisateur : les adresses de courriel ne seront pas demandées aux auteurs de messages."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limite des pièces jointes"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limiter le nombre de pièces jointes dans l'éditeur."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Protéger les pièces jointes"
