--- a/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.views.ini
@@ -84,15 +84,15 @@ COM_KUNENA_USRL_NAME="Felhasználói név"
 COM_KUNENA_A_CATEGORY_CFG_TAB_DISPLAY="Megjelenítési beállítások"
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_INDEX_LEGEND="Fórum-kategóriák"
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT="Kategória megjelenítése"
-; COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT_DESC="Display this category in the main Category Index page. There are three levels to be shown: sections, categories and sub-categories."
+COM_KUNENA_A_CATEGORY_CFG_DISPLAY_PARENT_DESC="Ennek a kategóriának a megjelenítése a fő Kategória Indexben. Ott három szint látható: szekciók, kategóriák és alkategóriák."
 COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN="Alkategóriák megjelenítése"
-; COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN_DESC="Display children of this category inside the main Category Index page. This setting overrides the previous setting of all the children if it's set to be more restrictive."
-; COM_KUNENA_A_CATEGORY_CFG_OPTION_NEVER="Never in Category Index"
+COM_KUNENA_A_CATEGORY_CFG_DISPLAY_CHILDREN_DESC="Ennek a gyermek-kategóriának a megjelenítése a fő Kategória Indexben. Ez a beállítás felülbírálja az összes gyermek kategória előző beállítását, ha annál szigorúbbra van állítva."
+COM_KUNENA_A_CATEGORY_CFG_OPTION_NEVER="Kategória Indexben soha"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SECTION="Ugrás fel a szekciószintre"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_CATEGORY="Ugrás fel a kategóriaszintre"
 COM_KUNENA_A_CATEGORY_CFG_OPTION_SUBCATEGORY="Ugrás fel az alkategóriaszintre"
 COM_KUNENA_ICON="Kategóriaikon:"
-; COM_KUNENA_ICON_DESC="Enter here the class for your icon. Example <strong>icon-home</strong>"
+COM_KUNENA_ICON_DESC="Add meg az ikon osztályát. Például <strong>icon-home</strong>"
 
 ; JROOT/administrator/components/com_kunena/views/categories/tmpl/default.php
 
@@ -147,11 +147,11 @@ COM_KUNENA_RESIZE_RESIZE="Átméretezés (Alap - Gyorsabb)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpoláció (Jobb - Gyors)"
 COM_KUNENA_RESIZE_BICUBIC="Bikubikus (Legjobb - Lassabb)"
 COM_KUNENA_A_ASK_EMAIL="Emailcím megkövetelése"
-COM_KUNENA_A_ASK_EMAIL_DESC="Állítsd <em>Igen</em>-re amennyiben megszeretnéd követelni az email cím megadását a felhasználók illetve látogatók hozzászólásainál."
+COM_KUNENA_A_ASK_EMAIL_DESC="E-mail megkövetelése látogatók hozzászólásánál. Használjunk <em>Nem</em>et, ha ezt szeretnénk átugrani a felhasználói felületen, így a hozzászólóknak nem kell email címet megadniuk. "
 COM_KUNENA_A_ATTACHMENT_LIMIT="Mellékletek limitálása"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="A beilleszthető mellékletek max. száma."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Mellékletek védelme"
-; COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="Protect attachment files from direct access by entering URLs like <em>%s</em>. This feature enables access control and removes most restrictions on filenames. Changing this option has no effect on existing filenames."
+COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="Csatolt fájlok védelme közvetlen elérés ellen az URL megadásával, pl. <em>%s</em>. Ez a képesség megengedi az elérés vezérlést és a fájlnevekből eltávolítja a legtöbb korlátozást. Ennek a lehetőségnek a módosítása nincs hatással a létező fájlevekre."
 COM_KUNENA_A_ATTACHMENTS="Mellékletek"
 COM_KUNENA_A_AUTOEMBEDEBAY="eBay aukciók beágyazása"
 COM_KUNENA_A_AUTOEMBEDEBAY_DESC="Állítsd <em>Igen</em>-re amennyiben szeretnéd, hogy az eBay aukciók és keresések automatikusan beágyazódjanak."
@@ -395,7 +395,7 @@ COM_KUNENA_CFG_DEFAULT_SORT_DESC="Válaszd ki, hogy mi legyen az alapértelmezet
 COM_KUNENA_CFG_FALLBACK_ENGLISH="Angol nyelv használata a hiányzó szövegeknél"
 COM_KUNENA_CFG_FALLBACK_ENGLISH_DESC="Állítsd <em>Igen</em>-re amennyiben szeretnéd, hogy angol nyelv jelenítődjön meg az azokon a helyeken ahol hiányos a fordítás. Ha <em>Nem</em>-re állítod, vagy be van kapcsolva a hibakeresési mód, akkor a fordítási kulcsok jelennek meg helyette (COM_KUNENA_LANGUAGE_KEY)."
 COM_KUNENA_CFG_LEGACY_URLS="Örökölt hivatkozások támogatása"
-; COM_KUNENA_CFG_LEGACY_URLS_DESC="Select Kunena version to add support for legacy URLs starting from that version. You have been using Kunena since version %s. This feature to keeps all the old links pointing to the forum working."
+COM_KUNENA_CFG_LEGACY_URLS_DESC="Válaszd ki azt a Kunena verziót, amelytől kezdve hozzáadásra kerüljön a támogatás URL öröklődés. A Kunenát a %s verzió óta használod. Ez a képesség megtartja a működő fórumra mutató összes régi hivatkozást."
 COM_KUNENA_CFG_POST_DATEFORMAT="Hozzászólás időformátuma"
 COM_KUNENA_CFG_POST_DATEFORMAT_DESC="Válaszd ki, hogy a hozzászólások megjelenítésekor milyen időformátum jelenítődjön meg."
 COM_KUNENA_CFG_POST_DATEFORMAT_HOVER="Kijelölt hozzászólás időformátuma"
@@ -484,10 +484,10 @@ COM_KUNENA_A_IP_TRACKING_DESC="Állítsd <em>Igen</em>-re amennyiben szeretnéd,
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="A vendég felhasználók is láthatják a statisztika hivatkozást"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Állítsd <em>Igenre</em>, amennyiben szeretnéd, hogy a vendégek is láthassák a statisztikákat."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Felhasználói lista beállítások"
-; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="User can report himself"
-; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Set to <em>Yes</em> if you want users can report himself on the messages"
+COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="Felhasználó jelentheti magát"
+COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Állítsd <em>Igen</em>-re amennyiben szeretnéd, hogy a felhasználók jelezhessék magukat az üzenetekben."
 COM_KUNENA_CFG_SEARCH_TIME="Keresési idő"
-; COM_KUNENA_CFG_SEARCH_TIME_DESC="Set the default search time <em>Big Sites must be set max year, because performance issues</em>"
+COM_KUNENA_CFG_SEARCH_TIME_DESC="Alapértelmezett keresési időt <em>nagy oldalaknál legfeljebb évvel kell beállítani mert működési hibához vezet</em>"
 COM_KUNENA_CFG_SEARCH_DATE_2WEEKS="2 hete"
 COM_KUNENA_CFG_SEARCH_DATE_3MONTHS="3 hónapja"
 COM_KUNENA_CFG_SEARCH_DATE_6MONTHS="6 hónapja"
@@ -502,20 +502,20 @@ COM_KUNENA_CFG_SEARCH_DATE_YESTERDAY="tegnap"
 COM_KUNENA_TEASER="Válszok elrejtése a vendégek elől"
 COM_KUNENA_TEASER_DESC="Amikor engedélyezve van, akkor a felhasználóknak be kell jelentkezniük a válaszok elolvasásához."
 COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="eBay AppID kulcs"
-; COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on your ebay developer account, you need to register on https://go.developer.ebay.com/ in order to get the AppID"
+COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="Meg kell adni az az ebay tervezői fiókod AppID-jét, melyhez a https://go.developer.ebay.com/ címen kell regisztrálnod annak beszerzéséhez"
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_LABEL="A Twitter ügyfélkulcs"
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_KEY_DESC="A Twitter ügyfélkulcs az API csatlakozáshoz"
-; COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="The Twitter consumer secret"
-; COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="The Twitter consumer secret to connect to API"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="Twitter ügyfél titkos kulcsa"
+COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="Twitter ügyfél titkos kulcsa az API csatlakozáshoz"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS="Hivatkozások maximális száma az üzenetben"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS_DESC="Itt adhatod meg a hivatkozások maximális számát az üzenetekben, az elarásztások elkerülése végett."
 COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="Captcha megjelenítése:"
-; COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completely"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Válaszd, ha vendég és regisztrált felhasználó is láthatja, vagy senki számára nem tiltott"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Senki"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Regisztrált felhasználók"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Vendég és regisztrált felhasználók"
-; COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_LABEL="Allow to let user to change subject on replies"
-; COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_DESC="Allow to let user to change subject on replies"
+COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_LABEL="Lehetővé teszi a felhasználó számára, hogy a válasz tárgyát módosítsa."
+COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_DESC="Lehetővé teszi a felhasználó számára, hogy a válasz tárgyát módosítsa."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
@@ -722,7 +722,7 @@ COM_KUNENA_TRASHED="Törölt"
 COM_KUNENA_A_PRUNE="Fórum takarítása"
 COM_KUNENA_A_PRUNE_CONTROL_OPTIONS="Csak takarítás"
 COM_KUNENA_A_PRUNE_DAYS="napja"
-; COM_KUNENA_A_PRUNE_DESC="The Prune Categories function allows you to prune topics where there have not been any new posts during the specified number of days."
+COM_KUNENA_A_PRUNE_DESC="Azon témák automatikus törlése, amelyekben a megadott napok óta nem érkezett új üzenet."
 COM_KUNENA_A_PRUNE_KEEP_STICKY="Tapadós témák megtartása"
 COM_KUNENA_A_PRUNE_NAME="Kipucolandó kategória:"
 COM_KUNENA_A_PRUNE_NOPOSTS="Ennél régebbi topikok kipucolása"
@@ -748,13 +748,13 @@ COM_KUNENA_MODAL_CLOSE="Bezárás"
 COM_KUNENA_AJAXMODAL_START_HEADER="Feladat inicializálása, kérjük várj!"
 COM_KUNENA_AJAXMODAL_START_BODY="Csatlakozás..."
 COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_HEADER="A feladat idő előtt ért véget"
-; COM_KUNENA_AJAXMODAL_ERROR_RESPONSE_BODY="Please find more details below."
+COM_KUNENA_AJAXMODAL_ERROR_RESPONSE_BODY="További részletek alább találhatók."
 COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_HEADER="Szerver időtúllépés"
-; COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_BODY="Server was unreachable or action took too long time to perform."
+COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_BODY="A szerver nem elérhető vagy a művelet végrehajtása túl hosszú ideig tart."
 COM_KUNENA_AJAXMODAL_ERROR_CANCEL_HEADER="Feladat törölve"
 COM_KUNENA_AJAXMODAL_ERROR_ABORT_BODY="Feladat megszakítva."
 COM_KUNENA_AJAXMODAL_ERROR_ABORT_HEADER="Helytelenül formázott válasz"
-; COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_BODY="Maybe you reloaded the page?"
+COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_BODY="Esetleg töltsük újra az oldalt?"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/syncusers.php
 
@@ -766,7 +766,7 @@ COM_KUNENA_SYNC_USERS_OPTIONS="Opciók"
 COM_KUNENA_SYNC_USERS_RENAME="Felhasználónév frissítése a hozzászólásokban"
 COM_KUNENA_SYNC_USERS_RENAME_DESC="Verzió ellenőrzés engedélyezése"
 COM_KUNENA_SYNC_USERS_DELLIFE="Örökös tiltással rendelkező felhasználók törlése"
-; COM_KUNENA_SYNC_USERS_DELLIFE_DESC="Delete all lifetime ban users. <em><b>All blocked joomla users will be deleted !!</b></em>"
+COM_KUNENA_SYNC_USERS_DELLIFE_DESC="Véglegesen kitiltott felhasználók törlése. <em><b>Az összes letiltott joomla felhasználó törölve lesz!!</b></em>"
 
 ; JROOT/administrator/components/com_kunena/views/tools/view.html.php
 
@@ -908,9 +908,9 @@ COM_KUNENA_DIAGNOSTICS_LABEL_DELETE_BROKEN_ITEMS="HIBÁS ELEMEK TÖRLÉSE"
 
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Kunena eltávolítása"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="FIGYELMEZTETÉS!"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Proceed with caution. This action is irreversible and will permanently delete this Kunena installation."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="All user data in the database including categories, topics, messages, and attachments will be deleted. Kunena installation directories will be removed from you Joomla install including the Kunena Site Component, Kunena Administrator Component, and Kunena Library. If you don't have a backup there is no way to go back and restore this data."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="In order to execute the process, you need to log in with a super-administrator account. If you have Two-Factor Authentication enabled you may need to include the authenticator code to proceed."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Figyelmesen járjon el. Ez a művelet nem vonható vissza és véglegesen törli ezt a Kunena telepítést."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="Minden felhasználói adat, beleértve a kategória, téma, üzenet és melléklet törlésre kerül. A Kunena telepítési mappák eltévolításra kerülnek Joomla telepítésedből, a Kunena frontend és adminisztrációs komponense és a Kunena függvénytár is. Ha nincs biztonsági mentésed ezekről, akkor nem lesz lehetőséged ezek későbbi helyreállítására."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="A folyamat végrehajtásához rendszer-adminisztrátorként kell bejelentkezned. Ha a kétfaktoros azonosítás engedélyezve van, akkor az azonosítási folyamatot is végre kell hajtani."
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_LOGIN="Felhasználói név"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_PASSWORD="Jelszó"
 COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="A folyamat végrehajtása"
