--- a/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.sys.ini
@@ -17,7 +17,7 @@ COM_KUNENA_DASHBOARD="Dashboard"
 COM_KUNENA_EMOTICON_MANAGER="Emoticons"
 COM_KUNENA_FILE_MANAGER="Allegati"
 COM_KUNENA_FORUM_TOOLS="Strumenti"
-; COM_KUNENA_PLUGIN_MANAGER="Plugins"
+COM_KUNENA_PLUGIN_MANAGER="Plugins"
 COM_KUNENA_RANK_MANAGER="Posizioni"
 COM_KUNENA_TEMPLATE_MANAGER="Templates"
 COM_KUNENA_TRASH_MANAGER="Cestino"
