--- a/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.views.ini
@@ -141,17 +141,17 @@ COM_KUNENA_ADMIN_RSS_SETTINGS="Impostazioni RSS"
 COM_KUNENA_ALLOW_USERNAME_CHANGE="Permetti cambio Username"
 COM_KUNENA_ALLOW_USERNAME_CHANGE_DESC="Permetti agli utenti di cambiare il proprio username nel proprio profilo."
 COM_KUNENA_AVATAR_QUALITY="Qualità avatar"
-; COM_KUNENA_AVATAR_RESIZE_METHOD="Avatar Resize Method"
-; COM_KUNENA_AVATAR_CROP="Avatar Cropping"
-; COM_KUNENA_RESIZE_RESIZE="Resize (Basic - Faster)"
-; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
-; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
+COM_KUNENA_AVATAR_RESIZE_METHOD="Metodo di ridimensionamento dell'Avatar"
+COM_KUNENA_AVATAR_CROP="Taglio dell'Avatar"
+COM_KUNENA_RESIZE_RESIZE="Ridimensionamento (Base - Più veloce)"
+COM_KUNENA_RESIZE_INTERPOLATION="Interpolazione (Migliore - Veloce)"
+COM_KUNENA_RESIZE_BICUBIC="Bicubico (Il migliore - Più lento)"
 COM_KUNENA_A_ASK_EMAIL="email richiesta"
-COM_KUNENA_A_ASK_EMAIL_DESC="E' richiesta l'email per poter postare. Settare <em>No</em> se non si vuole questa funzione."
+COM_KUNENA_A_ASK_EMAIL_DESC="Richiedi un indirizzo email quando i visitatori scrivono un post.<em>No</em> se vuoi che questa funzione sia ignorata nel lato pubblico. Non sarà richiesto l'indirizzo email agli utenti."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limita Allegati"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limita numero di allegati nell'editor"
-; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
-; COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="Protect attachment files from direct access by entering URLs like <em>%s</em>. This feature enables access control and removes most restrictions on filenames. Changing this option has no effect on existing filenames."
+COM_KUNENA_A_ATTACHMENT_PROTECTION="Proteggi gli allegati"
+COM_KUNENA_A_ATTACHMENT_PROTECTION_DESC="Protegge gli allegati dall'accesso diretto scrivendo gli URL, come <em>%s</em>. Questa funzione abilita il controllo all'accesso e rimuove la maggior parte delle restrizioni sui nomi dei file. La modifica di quest'opzione non ha effetto sui nomi dei file esistenti."
 COM_KUNENA_A_ATTACHMENTS="Allegati"
 COM_KUNENA_A_AUTOEMBEDEBAY="Autoacquisizione oggetti eBay"
 COM_KUNENA_A_AUTOEMBEDEBAY_DESC="Settare <em>Sì</em> se si vuole l'autoacquisizione degli oggetti Ebay."
@@ -394,7 +394,7 @@ COM_KUNENA_CFG_DEFAULT_SORT="Ordine Messaggi"
 COM_KUNENA_CFG_DEFAULT_SORT_DESC="Seleziona l'ordine di default dei messaggi quando si visualizzano i topic. Questo settaggio può essere personalizzato dall'utente"
 COM_KUNENA_CFG_FALLBACK_ENGLISH="Usa l'inglese per le stringhe mancanti"
 COM_KUNENA_CFG_FALLBACK_ENGLISH_DESC="Utilizza la lingua inglese quando la traduzione non è presente. Se selezionato su <em>No</em> o il debug mode è attivato,  le stringhe di kunena (COM_KUNENA_LANGUAGE_KEY) saranno mostrate così."
-; COM_KUNENA_CFG_LEGACY_URLS="Support Legacy URLs"
+COM_KUNENA_CFG_LEGACY_URLS="Supporta gli URL Legacy"
 ; COM_KUNENA_CFG_LEGACY_URLS_DESC="Select Kunena version to add support for legacy URLs starting from that version. You have been using Kunena since version %s. This feature to keeps all the old links pointing to the forum working."
 COM_KUNENA_CFG_POST_DATEFORMAT="Formato data"
 COM_KUNENA_CFG_POST_DATEFORMAT_DESC="Scegli il formato data da visualizzare nel forum."
@@ -722,7 +722,7 @@ COM_KUNENA_TRASHED="Cestinato"
 COM_KUNENA_A_PRUNE="Snellisci forum"
 COM_KUNENA_A_PRUNE_CONTROL_OPTIONS="Pota Solo"
 COM_KUNENA_A_PRUNE_DAYS="Giorni"
-; COM_KUNENA_A_PRUNE_DESC="The Prune Categories function allows you to prune topics where there have not been any new posts during the specified number of days."
+COM_KUNENA_A_PRUNE_DESC="L'opzione Snellisci Categorie permette di ripulire le discussioni che non hanno avuto risposta entro il numero di giorni specificato."
 COM_KUNENA_A_PRUNE_KEEP_STICKY="Mantieni Sticky Topics"
 COM_KUNENA_A_PRUNE_NAME="Argomenti da ripulire:"
 COM_KUNENA_A_PRUNE_NOPOSTS="Ripulisci discussioni senza risposte"
