--- a/components/com_kunena/admin/language/ja-JP/ja-JP.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ja-JP/ja-JP.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="リサイズ (基本 - 高速)"
 COM_KUNENA_RESIZE_INTERPOLATION="補間 (良好 - 高速)"
 COM_KUNENA_RESIZE_BICUBIC="バイキュービック (最良 - 低速)"
 COM_KUNENA_A_ASK_EMAIL="メールアドレス必須"
-COM_KUNENA_A_ASK_EMAIL_DESC="ユーザもしくは訪問者の投稿時にメールアドレスの入力を必須とします。フロントエンドでこの機能をスキップしたい場合、<em>いいえ</em>を設定して下さい。投稿者はメールアドレスを要求されません。"
+COM_KUNENA_A_ASK_EMAIL_DESC="訪問者の投稿時にメールアドレスの入力を必須とします。フロントエンドでこの機能をスキップしたい場合、<em>いいえ</em>を設定して下さい。投稿者はメールアドレスを要求されません。"
 COM_KUNENA_A_ATTACHMENT_LIMIT="添付ファイルの上限"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="エディタ内の添付ファイルの上限数を設定します。"
 COM_KUNENA_A_ATTACHMENT_PROTECTION="添付保護"
