--- a/components/com_kunena/admin/language/pt-BR/pt-BR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pt-BR/pt-BR.com_kunena.views.ini
@@ -126,7 +126,7 @@ COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE="Exibir Data de Registro"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA="Exibir Karma"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA_DESC="Set you <em>Yes</em> if you want to display the Karma indicator"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE="Exibir Data da Última Visita"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="Set to <em>Yes</em> if you want to display the last time the user was logged in."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="Configure para <em>Sim</em> se você quiser mostrar a última vez em que o usuário se conectou."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME="Exibir Nome Real"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME_DESC="Set to <em>Yes</em> if you want to display the real name."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS="Exibir Número de Postagens"
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Qualidade do Avatar"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Requerer E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Requerer um endereço de e-mail quando usuários ou visitantes fizerem uma postagem. Selecione <em>Não</em> se você deseja que este recurso não seja utilizado na área pública. Não será perguntado os endereços de e-mail dos postadores."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Anexos Limitados"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limitar o número de anexos no editor"
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
