--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Redimensionar (básico - o mais rápido)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolar (melhor - rápido)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Pedir email"
-COM_KUNENA_A_ASK_EMAIL_DESC="Pedir um endereço de e-mail quando os visitantes ou utilizadores coloquem uma resposta. Selecionar <em>Não</em> se não quiser utilizar esta funcionalidade no site. Não será solicitado o e-mail na colocação de mensagens pelos utilizadores."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limitar anexos"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limitar o número de anexos no editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Proteger anexos"
