--- a/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.sys.ini
@@ -14,12 +14,12 @@
 ; COM_KUNENA_CATEGORY_MANAGER="Categories"
 COM_KUNENA_CONFIGURATION="Konfiguration"
 COM_KUNENA_DASHBOARD="Kontrollpanel"
-; COM_KUNENA_EMOTICON_MANAGER="Emoticons"
+COM_KUNENA_EMOTICON_MANAGER="Emotikoner"
 ; COM_KUNENA_FILE_MANAGER="Attachments"
-; COM_KUNENA_FORUM_TOOLS="Tools"
+COM_KUNENA_FORUM_TOOLS="Verktyg"
 ; COM_KUNENA_PLUGIN_MANAGER="Plugins"
-; COM_KUNENA_RANK_MANAGER="Ranks"
-; COM_KUNENA_TEMPLATE_MANAGER="Templates"
+COM_KUNENA_RANK_MANAGER="Rank"
+COM_KUNENA_TEMPLATE_MANAGER="Mallar"
 ; COM_KUNENA_TRASH_MANAGER="Trashbin"
 ; COM_KUNENA_USER_MANAGER="Users"
 
