--- a/components/com_kunena/admin/language/uk-UA/uk-UA.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/uk-UA/uk-UA.com_kunena.libraries.ini
@@ -193,14 +193,14 @@ COM_KUNENA_POST_EMAIL_NOTIFICATION_MORE_SUBSCRIBE="Будь ласка, звер
 COM_KUNENA_POST_ERROR_DELETE_REPLY_AFTER="Ви не можете видалити своє повідомлення. Хтось додав відповідь (можливо, на Ваше повідомлення)."
 COM_KUNENA_THANKYOU_DISABLED="Функція Дякую була відключена адміністратором сайту."
 COM_KUNENA_VIEW_POSTED="Написав"
-; COM_KUNENA_POST_ATTACHMENTS_FILES_NOT_ALLOWED="Posting attachments files isn't allowed"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_ADMINISTRATORS="Posting attachments files is allowed only for administrators"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_REGISTERED_USERS="Posting attachments files is allowed only for registred users"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_MODERATORS="Posting attachments files is allowed only for moderators"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_NOT_ALLOWED="Posting attachments images isn't allowed"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_ADMINISTRATORS="Posting attachments images is allowed only for administrators"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_REGISTERED_USERS="Posting attachments images is allowed only for registred users"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_MODERATORS="Posting attachments images is allowed only for moderators"
+COM_KUNENA_POST_ATTACHMENTS_FILES_NOT_ALLOWED="Немає дозволу на відправлення вкладених файлів"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_ADMINISTRATORS="Відправлення вкладених файлів дозволено тільки для адміністраторів"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_REGISTERED_USERS="Відправлення вкладених файлів дозволено тільки для зареєстрованих користувачів"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_MODERATORS="Відправлення вкладених файлів дозволено тільки для модераторів"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_NOT_ALLOWED="Немає дозволу на відправлення вкладених картинок"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_ADMINISTRATORS="Відправлення вкладених картинок дозволено тільки для адміністраторів"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_REGISTERED_USERS="Відправлення вкладених картинок дозволено тільки для зареєстрованих користувачів"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_MODERATORS="Відправлення вкладених картинок дозволено тільки для модераторів"
 
 ; JROOT/administrator/components/com_kunena/libraries/forum/message/thankyou/thankyou.php
 
@@ -405,7 +405,7 @@ COM_KUNENA_VIEW_USER="Користувач"
 COM_KUNENA_VIEW_USER_LINK_TITLE="Дивитись профіль %s"
 COM_KUNENA_VIEW_VISITOR="Відвідувач"
 COM_KUNENA_VIEW_MODERATOR="Модератор"
-; COM_KUNENA_PM_WRITE="Write Private Message"
+COM_KUNENA_PM_WRITE="Написати приватне повідомлення"
 
 ; JROOT/administrator/components/com_kunena/libraries/view.php
 
@@ -458,10 +458,10 @@ COM_KUNENA_UPLOAD_ERROR_SIZE_0="Порожній файл."
 COM_KUNENA_UPLOAD_ERROR_SIZE_X="Розмір файлу (%s) перевищує максимально дозволений адміністратором."
 COM_KUNENA_UPLOAD_ERROR_STAT="Неможливо прочитати файл %s."
 COM_KUNENA_UPLOAD_ERROR_UNDEFINED="Тип файлу не визначено."
-; COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_BYTES="B"
-; COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_KB="kB"
-; COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_MB="MB"
-; COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_GB="GB"
+COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_BYTES="Б"
+COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_KB="КБ"
+COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_MB="МБ"
+COM_KUNENA_UPLOAD_ERROR_FILE_WEIGHT_GB="ГБ"
 
 ; Strings in wrong location
 
