--- a/components/com_kunena/site/language/ca-ES/ca-ES.com_kunena.ini
+++ b/components/com_kunena/site/language/ca-ES/ca-ES.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Tauler de control"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Gestor de categories"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Entra al Gestor de categories."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Marca fòrum com a llegit"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Marca tots els temes en aquesta categeoria com a llegits."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Subscriure't"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Subscriure't a aquesta categoria."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Anul·la subscripció al tema"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Historial de Sancions"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
