--- a/components/com_kunena/site/language/da-DK/da-DK.com_kunena.ini
+++ b/components/com_kunena/site/language/da-DK/da-DK.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrol panel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Kategori håndtering"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Gå ind i Kategori håndtering"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Markér forum som læst"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Gør alle emner i denne kategori læste"
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Markér alle emner i denne kategori som læste"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Abonnér"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Abonnér på denne kategori"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Afmeld"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Du opretter indlæg som 'gæst'"
 COM_KUNENA_META_PROFILE="%s er på %s. For at forbinde med %s, gå med i %s i dag."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil ikke gemt"
 COM_KUNENA_PROFILE_SAVE_ERROR="Fejl ved Gem Profil"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "og denne bruger har %s andre Tak"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Emner der kræver opmærksomhed"
