--- a/components/com_kunena/site/language/de-DE/de-DE.com_kunena.ini
+++ b/components/com_kunena/site/language/de-DE/de-DE.com_kunena.ini
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Du schreibst den Beitrag als "_QQ_"
 COM_KUNENA_META_PROFILE="%s ist auf %s. Um sich mit %s zu verbinden, trete %s heute bei."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil nicht gespeichert"
 COM_KUNENA_PROFILE_SAVE_ERROR="Fehler beim Speichern des Profiles"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "und weitere %s"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Themen benötigen Aufmerksamkeit"
