--- a/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.models.ini
+++ b/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.models.ini
@@ -13,7 +13,7 @@
 
 COM_KUNENA_APPROVE_SELECTED = "Aprobi elektitajn"
 COM_KUNENA_BULK_CHOOSE_ACTION = "- Elekti agon -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Daŭra forigo de elekto"
+COM_KUNENA_BUTTON_PERMDELETE_LONG = "Daŭre forigi elektitajn"
 COM_KUNENA_BUTTON_UNDELETE_LONG = "Malforigi elektitajn"
 COM_KUNENA_DELETE_SELECTED = "Forigi elektitajn"
 COM_KUNENA_MOVE_SELECTED = "Movi elektitajn"
@@ -29,7 +29,7 @@ COM_KUNENA__BULK_ANNOUNCEMENT_DELETE = "Forigi"
 
 COM_KUNENA_GEN_SEARCH_BOX = "Serĉi forumon"
 COM_KUNENA_SEARCH_ERR_NOPOSTS = "Ne troviĝas mesaĝo havante ĉiujn viajn serĉ-ĉenojn."
-COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Minimume unu ŝlosilvorto devas plilongi ol tri signoj."
+COM_KUNENA_SEARCH_ERR_SHORTKEYWORD = "Minimume unu ŝlosilvorto pli longu ol tri signoj."
 COM_KUNENA_SEARCH_NORESULTS_FOUND = "Via serĉo %s ne kongruas al iu temo."
 
 ; JROOT/components/com_kunena/models/topics.php
