--- a/components/com_kunena/site/language/eo-XX/eo-XX.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/eo-XX/eo-XX.kunena_tmpl_crypsis.ini
@@ -108,10 +108,10 @@ COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Maksimuma bilddosiera grando"
 
 COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Mapaj agordoj"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Tipo"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoma nivelo"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="Urbo"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hibrido"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Vojmapo"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Tereno"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satelito"
 COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Kodaj agordoj"
@@ -125,11 +125,11 @@ COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Grando"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Larĝo"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Alto"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Urla provizanto"
 COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
 COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Enketagordoj"
 COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Aldoni"
-; COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
+COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Fermi modalan"
 COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Videaj agordoj"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
@@ -173,7 +173,7 @@ COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enigi la koloron de la sekcia baskulig
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/logout_menu.php
 
-; COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferences"
+COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Opcioj"
 COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Helpo"
 
 ; JROOT/components/com_kunena/template/crypsis/html/announcement/list.php
@@ -218,8 +218,8 @@ COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Enigi plenan priskribon de afiŝ
 
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Malpli"
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "Pli"
-; COM_KUNENA_TOPIC_AUTHOR="Topic Author"
-; COM_KUNENA_MODERATOR="Moderator"
+COM_KUNENA_TOPIC_AUTHOR="Tema aŭtoro"
+COM_KUNENA_MODERATOR="Moderanto"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/item/summary/default.php
 COM_KUNENA_PROFILE_VIEWS = "Profilaj vidoj"
@@ -255,10 +255,10 @@ COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Montri mapojn"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Montri mapojn en redaktilo"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Montri mienetojn"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Montri mienetojn en redaktilo"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Montri Tviteron"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Montri tviteron en redaktilo"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Montri ebay"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Montri ebay en redaktilo"
 COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Montri ligon"
 COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Montri ligon en redaktilo"
 COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Montri bildon"
@@ -273,18 +273,18 @@ COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Montri kodon"
 COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Montri kodon en redaktilo"
 COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Montri citilojn"
 COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Montri citilojn en redaktilo"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
-; COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
-; COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
-; COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Montri dividilon"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Montri dividilon en redaktilo"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Maks. mesaĝa titola longo en mesaĝo"
+COM_KUNENA_TEMPLATE_RECOVER="Restaŭri paneon kaj stoki kampojn"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="Tio ĉi memoras la datumojn de viaj mesaĝoj, post paneoj aŭ moviĝo de datumoj el rapidrespondo al redaktilo"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Defaŭlta kategoria bildeto"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Defaŭlta kategoria bildeto, defaŭlto estas icon-folder"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Elekti koloron por kategoriaj bildetoj"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Elekti koloron por kategoriaj bildetoj"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Elekti koloron por NOVA bildeto kaj teksto"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Elekti koloron por NOVA bildeto kaj teksto"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Skribi"
 
 ; Removed strings
 
