--- a/components/com_kunena/site/language/es-ES/es-ES.com_kunena.ini
+++ b/components/com_kunena/site/language/es-ES/es-ES.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Panel de Control"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Administrar Categorias"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Entrar al Administrador de Categorias."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Marcar Temas como Leídos"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Marcar todos los temas de la categoría como leidos."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Suscribirse"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Suscribirse a esta categoría."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Desuscribirse"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>Información</strong>: que está posteando el mens
 COM_KUNENA_META_PROFILE="%s es %s. Para conectar con %s, %s de Únete hoy."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Perfil no guardado"
 COM_KUNENA_PROFILE_SAVE_ERROR="Error en Perfil de ahorro"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Temas que requieren atención"
