--- a/components/com_kunena/site/language/fi-FI/fi-FI.com_kunena.ini
+++ b/components/com_kunena/site/language/fi-FI/fi-FI.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Hallintapaneeli"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Hallitse kategorioita"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Siirry kategoriahallintaan."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Merkitse aiheet luetuksi"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Merkitse kaikki tämän kategorian aiheet luetuiksi."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Seuraa"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Seuraa tätä kategoriaa."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Poista seuranta"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Olet lähettämässä viestin kuten
 COM_KUNENA_META_PROFILE="%s on paikalla %s:ssa. Jos haluat yhteyden henkilöön %s, liity %s tänään."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profiilia ei tallennettu"
 COM_KUNENA_PROFILE_SAVE_ERROR="Virhe profiilin tallennuksessa"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Huomiota tarvitsevat aiheet"
