--- a/components/com_kunena/site/language/fr-FR/fr-FR.com_kunena.ini
+++ b/components/com_kunena/site/language/fr-FR/fr-FR.com_kunena.ini
@@ -135,7 +135,7 @@ COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Vous pouvez déposer des fi
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Impossible de déplacer l'avatar dans répertoire médias"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "La taille de l'avatar dépasse la limite autorisée par la configuration"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "La taille de l'avatar dépasse la limite autorisée par la configuration"
-; COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Attachment image size exceed limit allowed by configuration"
+COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "La taille de l'image de la pièce jointe dépasse la limite autorisée par la configuration"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Vous envoyez le message comme un «
 COM_KUNENA_META_PROFILE="%s est sur %s. Pour se connecter avec %s, rejoignez %s maintenant."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Le profil n'a pas été enregistré"
 COM_KUNENA_PROFILE_SAVE_ERROR="Erreur lors de l'enregistrement du profil"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "et cet utilisateur a reçu %s autres remerciements"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Sujets nécessitant une attention"
