--- a/components/com_kunena/site/language/hi-IN/hi-IN.com_kunena.ini
+++ b/components/com_kunena/site/language/hi-IN/hi-IN.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "नियंत्रण पैनल"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "श्रेणियों को व्यवस्थित करें"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "श्रेणी प्रबंधक में प्रवेश करें."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "विषयों को पढ़ा हुआ चिह्नित करें"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "इस श्रेणी के सभी विषयों को पढ़ा हुआ चिह्नित करें."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "सब्सक्राइब्ड करें"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "इस श्रेणी को सब्सक्राइब करें."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "सबक्रिप्शन समाप्त करें"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="इतिहास प्रतिब
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
