--- a/components/com_kunena/site/language/hu-HU/hu-HU.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/hu-HU/hu-HU.kunena_tmpl_crypsis.ini
@@ -14,7 +14,7 @@ COM_KUNENA_TEMPLATE_CRYPSIS_DESC = "A Crypsis sablon a Bootstrap és a LESS tech
 
 COM_KUNENA_X_TOPICS_0 = "Nincsenek témák"
 COM_KUNENA_X_TOPICS_1 = "%s téma"
-COM_KUNENA_X_TOPICS_MORE = "%s témák"
+COM_KUNENA_X_TOPICS_MORE = "%s téma"
 COM_KUNENA_BY_X = "írta %s"
 COM_KUNENA_FAVORITE = "Kedvenc"
 COM_KUNENA_MYPOSTS = "Bejegyzéseimet tárolja"
@@ -31,7 +31,7 @@ COM_KUNENA_REPLYTO_X = "Válasz %s üzenetére"
 
 COM_KUNENA_X_HIDDEN = "%d rejtett"
 COM_KUNENA_SEE_ALL_SUBJECTS = "A témák teljes listájának megtekintése"
-COM_KUNENA_SEE_MORE = "Lásd még..."
+COM_KUNENA_SEE_MORE = "Folytatás..."
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/default.php
 
@@ -47,7 +47,7 @@ COM_KUNENA_MARK_CATEGORIES_READ = "Megjelölés olvasottként"
 
 COM_KUNENA_GEN_NOFORUMS = "Nincs kategória ebben a szekcióban!"
 COM_KUNENA_LOCKED_CATEGORY = "A fórum zárolva"
-COM_KUNENA_SHOWCAT_PENDING = "várakozó hozzászólás(ok)"
+COM_KUNENA_SHOWCAT_PENDING = "várakozó hozzászólás"
 COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "Új kategória"
 COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Szekció szerkesztése"
 COM_KUNENA_CATEGORIES_LABEL_GETRSS = "A legfrissebb hozzászólások lekérése közvetlenül az asztalon"
@@ -277,7 +277,7 @@ COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Elválasztó megjelenítése"
 COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Elválasztó megjelenítése a szerkesztőben"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. üzenet címhosszúság"
 COM_KUNENA_TEMPLATE_RECOVER="Összeomlási és tárolási mezők visszaállítása"
-; COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="Megőrzi üzenetedet összeomláskor vagy az adatok mozgatásakor a gyors válaszból a szerkesztőbe"
 COM_KUNENA_TEMPLATE_DEFAULT_ICON="Alapértelmezett kategóriaikon"
 COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Az alapértelmezett kategória ikon a mappa ikon"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Kategóriaikonok színeinek kiválasztása"
