--- a/components/com_kunena/site/language/it-IT/it-IT.com_kunena.ini
+++ b/components/com_kunena/site/language/it-IT/it-IT.com_kunena.ini
@@ -135,7 +135,7 @@ COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Puoi rilasciare file qua o 
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Spostamento dell'avatar nella cartella media fallito"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "La dimensione dell'avatar eccede quella consentita dalla configurazione"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "La dimensione dell'allegato eccede quella consentita dalla configurazione"
-; COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Attachment image size exceed limit allowed by configuration"
+COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "La dimensione dell'immagine allegata eccede quella consentita dalla configurazione"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Pannello di controllo"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Gestisci categorie"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Entra in gestione categorie."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Segna discussioni come già lette"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Segna tutte le discussioni in questa categoria come già lette"
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Contrassegna come già lette tutte le discussioni di questa categoria."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Sottoscrivi"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Sottoscriviti questa categoria"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Rimuovi sottoscrizione"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: stai scrivendo il messaggio come 'O
 COM_KUNENA_META_PROFILE="%s è su %s. Per connetterti con %s, iscriviti a %s oggi."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profilo non salvato"
 COM_KUNENA_PROFILE_SAVE_ERROR="Errore durante il salvataggio del profilo"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "e questo utente ha %s altri ringraziamenti"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Argomenti che richiedono attenzione"
