--- a/components/com_kunena/site/language/it-IT/it-IT.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/it-IT/it-IT.com_kunena.templates.ini
@@ -22,13 +22,13 @@ COM_KUNENA_ICON_QUESTION = "Domanda?"
 COM_KUNENA_ICON_SHOCK = "Scioccato"
 COM_KUNENA_ICON_SMILE = "Sorriso"
 COM_KUNENA_ICON_SOLVED = "Risolto"
-; COM_KUNENA_TEMPLATE_LABELS="Show Labels"
-; COM_KUNENA_TEMPLATE_LABELS_DESC="Show Labels on topic row"
-; COM_KUNENA_TEMPLATE_PROFILE_TYPE="Avatar Type"
-; COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Select the Avatar type"
-; COM_KUNENA_TEMPLATE_ROUNDED="Rounded"
-; COM_KUNENA_TEMPLATE_CIRCLE="Circle"
-; COM_KUNENA_TEMPLATE_THUMBNAIL="Thumbnail"
+COM_KUNENA_TEMPLATE_LABELS="Visualizza etichette"
+COM_KUNENA_TEMPLATE_LABELS_DESC="Visualizza etichette sulla riga degli argomenti"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE="Tipo di Avatar"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Seleziona il tipo di avatar"
+COM_KUNENA_TEMPLATE_ROUNDED="Arrotondato"
+COM_KUNENA_TEMPLATE_CIRCLE="Circolare"
+COM_KUNENA_TEMPLATE_THUMBNAIL="Anteprima"
 
 ; JROOT/components/com_kunena/template/
 
@@ -353,18 +353,18 @@ COM_KUNENA_USER_ATTACHMENT_FILE_WEIGHT = "KB"
 COM_KUNENA_ATTACHMENT_MANAGER_TOPIC = "Link discussione"
 COM_KUNENA_MODERATION_CHANGE_TOPIC_ICON = "Cambia icona del topic"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Icona Argomento"
-; COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Enable topicons css"
-; COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Load External CDN Fontawesome"
-; COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Load External CDN Fontawesome"
-; COM_KUNENA_TEMPLATE_NORMAL="Default"
-; COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
-; COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
-; COM_KUNENA_TEMPLATE_FONTAWESOME="Fontawesome"
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_MULTIPLES="This message has attachments images.<br /> Please log in or register to see it."
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="This message has attachments files.<br /> Please log in or register to see it."
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="This message has an attachment image.<br /> Please log in or register to see it."
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="This message has an attachment file.<br /> Please log in or register to see it."
-; COM_KUNENA_AUP_MEDALS = "Medals:"
+COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Abilita topicons CSS"
+COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Carica la CDN esterna FontAwesome"
+COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Carica la CDN esterna FontAwesome"
+COM_KUNENA_TEMPLATE_NORMAL="Predefinito"
+COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
+COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
+COM_KUNENA_TEMPLATE_FONTAWESOME="FontAwesome"
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_MULTIPLES="Questo messaggio ha immagini allegate.<br />Accedi o registrati per visualizzarle."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="Questo messaggio ha file allegati.<br />Accedi o registrati per visualizzarli."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="Questo messaggio ha un'immagine allegata.<br />Accedi o registrati per visualizzarla."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="Questo messaggio ha un file allegato.<br />Accedi o registrati per visualizzarlo."
+COM_KUNENA_AUP_MEDALS = "Medaglie:"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
