--- a/components/com_kunena/site/language/ja-JP/ja-JP.com_kunena.ini
+++ b/components/com_kunena/site/language/ja-JP/ja-JP.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "コントロールパネル"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "カテゴリ管理"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "カテゴリの管理へ入ります。"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "フォーラムを既読でマーク"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "このカテゴリ内の全トピックを既読としてマークします。"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "購読"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "このカテゴリを購読します。"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "購読を解除します"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>情報</strong>: あなたは「ゲスト」とし
 COM_KUNENA_META_PROFILE="%s - %s : 今日 %s 参加し、%s で接続してください。"
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="保存されていないプロファイル"
 COM_KUNENA_PROFILE_SAVE_ERROR="プロファイル保存中のエラー"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "- ユーザ %s は他にも感謝されています"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="注意が必要なトピック"
