--- a/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.ini
+++ b/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.ini
@@ -50,7 +50,7 @@ COM_KUNENA_EDIT = "수정"
 COM_KUNENA_EDITOR_INSERT = "본문에 삽입"
 ; COM_KUNENA_EDITOR_IN_MESSAGE="In Message"
 COM_KUNENA_EMAIL_DISABLED = "이메일 보내지지 않음(로컬호스트에서 요청이 있었음)"
-COM_KUNENA_EMAIL_INVALID = "게시판이 이메일을 보내려했으나 주소가 유효하지 않습니다. 싸이트 관리자에게 연락하세요."
+COM_KUNENA_EMAIL_INVALID = "포럼에서 이메일을 보내려 했으나 주소가 유효하지 않습니다. 사이트 관리자에게 연락하세요."
 COM_KUNENA_ERROR1 = "섹션과 카테고리는 이름이 있어야 됩니다."
 COM_KUNENA_ERROR_TOKEN = "다른 세션에서 이미 퇴물이 된 폼으로 정보를 입력하셨습니다. 사용자 계정이 당신 것인지 확인하시고 다시 시도하세요."
 COM_KUNENA_FILENAME = "파일명:"
@@ -73,7 +73,7 @@ COM_KUNENA_MODSASSIGNED = "이 카테고리에 지정된 모더레이터:"
 COM_KUNENA_MYPROFILE_BIRTHDATE = "생일"
 COM_KUNENA_MYPROFILE_GENDER = "성별"
 COM_KUNENA_MYPROFILE_LOCATION = "지역"
-COM_KUNENA_MYPROFILE_WEBSITE = "웹싸이트"
+COM_KUNENA_MYPROFILE_WEBSITE = "웹 사이트"
 COM_KUNENA_NAMEADD = "이름:"
 COM_KUNENA_NO = "아니오"
 COM_KUNENA_NOMODS = "이 카테고리에는 지정된 모더레이터가 없습니다."
@@ -87,7 +87,7 @@ COM_KUNENA_PUBLISHED = "공개"
 COM_KUNENA_REORDER = "재 정렬"
 COM_KUNENA_RESET = "리셋"
 COM_KUNENA_REV = "게시글 리뷰:"
-COM_KUNENA_REVDESC = "<em>예</em>로 지정하면 이 게시판은 모더레이터가 리뷰를 한 다음에만 글이 공개됩니다. 이것은 모더레이션을 지정한 카테고리에만 유용합니다!<br /> 이 설정을 했는데 모더레이터가 지정돼있지 않으면, 제출된 게시글을 승인/삭제 할 수 있는 사람은 싸이트 관리자 밖에 없으며 이 글들은 "_QQ_"유보 상태"_QQ_"로 있게 됩니다!"
+COM_KUNENA_REVDESC = "<em>예</em>로 지정하면 이 게시판은 중재자의 확인을 거쳐 글이 공개됩니다. 이것은 '게시 보류'를 지정한 카테고리에만 유용합니다!<br /> 이 설정을 했으나 중재자를 지명하지 않았다면 제출된 게시글의 '승인 및 삭제' 권한은 사이트 관리자에 한정돼 있으므로 활동이 활발한 게시판에서는 '게시 보류' 상태의 글이 증가할 수 있습니다."
 COM_KUNENA_REVIEW = "리뷰"
 COM_KUNENA_SECTION = "섹션"
 COM_KUNENA_SHOW_12_HOURS = "12 시간"
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "제어판"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "카테고리 관리"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "카테고리 관리 들어가기"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "포럼을 읽은 것으로 표시"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "이 카테고리의 모든 주제글을 읽은 것으로 표시."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "구독"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "이 카테고리 구독하기"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "구독 해제"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="금지 히스토리"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
