--- a/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.templates.ini
@@ -11,14 +11,14 @@
 
 ; JROOT/administrator/components/com_kunena/media/kunena/topicicons/default/topicicons.xml
 
-COM_KUNENA_ICON_CROSS = "십자형"
+COM_KUNENA_ICON_CROSS = "십자가"
 COM_KUNENA_ICON_DEFAULT = "기본 아이콘"
 COM_KUNENA_ICON_EXCLAMATION = "감탄"
 COM_KUNENA_ICON_GRIN = "웃음"
-COM_KUNENA_ICON_IDEA = "새 아이디어"
-COM_KUNENA_ICON_LOVE = "사랑함"
-COM_KUNENA_ICON_MERGED = "합침"
-COM_KUNENA_ICON_QUESTION = "의문?"
+COM_KUNENA_ICON_IDEA = "새로운 생각"
+COM_KUNENA_ICON_LOVE = "사랑"
+COM_KUNENA_ICON_MERGED = "병합"
+COM_KUNENA_ICON_QUESTION = "의문"
 COM_KUNENA_ICON_SHOCK = "충격"
 COM_KUNENA_ICON_SMILE = "미소"
 COM_KUNENA_ICON_SOLVED = "해결됨"
@@ -45,12 +45,12 @@ COM_KUNENA_ANN_SORTTEXT = "짧은 글"
 COM_KUNENA_ANN_TITLE = "제목"
 COM_KUNENA_ATTACHMENTS = "첨부파일:"
 COM_KUNENA_AUP_POINTS = "포인트:"
-COM_KUNENA_BAN_ADDCOMMENT = "코멘트하기"
-COM_KUNENA_BAN_ADDCOMMENT_DESC = "다른 모더레이터에게 자신의 코멘트를 작성할 수 있습니다."
-COM_KUNENA_BAN_BANHISTORY = "금지 히스토리"
-COM_KUNENA_BAN_BANHISTORYFOR = " %s 의 금지 히스토리"
-COM_KUNENA_BAN_BANLEVEL = "금지된 곳"
-COM_KUNENA_BAN_BANLEVEL_JOOMLA = "싸이트"
+COM_KUNENA_BAN_ADDCOMMENT = "댓글 달기"
+COM_KUNENA_BAN_ADDCOMMENT_DESC = "다른 중재자에게 자신의 견해를 작성할 수 있습니다."
+COM_KUNENA_BAN_BANHISTORY = "차단 역사"
+COM_KUNENA_BAN_BANHISTORYFOR = " %s 사용자의 차단 역사"
+COM_KUNENA_BAN_BANLEVEL = "차단된 곳"
+COM_KUNENA_BAN_BANLEVEL_JOOMLA = "사이트"
 COM_KUNENA_BAN_BANLEVEL_KUNENA = "포럼"
 COM_KUNENA_BAN_BANMANAGER = "추방 관리자"
 COM_KUNENA_BAN_BANNEDFROM = "추방된 게시판"
@@ -81,7 +81,7 @@ COM_KUNENA_CAPDESC = "여기에 코드를 입력하세요"
 COM_KUNENA_CATEGORY_SUBSCRIPTIONS_NONE = "구독 중인 카테고리가 없습니다"
 COM_KUNENA_CATEGORY_X = "카테고리: %s"
 COM_KUNENA_CHECK_ALL = "모두 체크"
-COM_KUNENA_COLOR_ADMINISTRATOR = "싸이트 관리자"
+COM_KUNENA_COLOR_ADMINISTRATOR = "사이트 관리자"
 COM_KUNENA_COLOR_BANNED = "추방됨"
 COM_KUNENA_COLOR_GLOBAL_MODERATOR = "전체 모더레이터"
 COM_KUNENA_COLOR_GUEST = "손님"
@@ -187,9 +187,9 @@ COM_KUNENA_MYPROFILE_SIGNATURE = "시그너처"
 COM_KUNENA_MYPROFILE_SIGNATURE_DESC = "스마일리(이모티콘)과 BBCode를 시그너처에 사용할 수 있습니다."
 COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED = "받은 '감사':"
 COM_KUNENA_MYPROFILE_TIMEZONE = "시간대"
-COM_KUNENA_MYPROFILE_WEBSITE_NAME = "웹싸이트 명"
+COM_KUNENA_MYPROFILE_WEBSITE_NAME = "웹 사이트 이름"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC = "예: 쿠네나"
-COM_KUNENA_MYPROFILE_WEBSITE_URL = "웹싸이트 URL"
+COM_KUNENA_MYPROFILE_WEBSITE_URL = "웹 사이트 주소"
 COM_KUNENA_MYPROFILE_WEBSITE_URL_DESC = "예:www.ibrary.co.kr"
 COM_KUNENA_NO_POSTS = "게시물 없습니다"
 COM_KUNENA_PASS = "비밀번호:"
@@ -210,7 +210,7 @@ COM_KUNENA_POSTED_AT = "게시됨"
 COM_KUNENA_POSTS = "게시물:"
 COM_KUNENA_POST_AS_ANONYMOUS = "익명 게시"
 COM_KUNENA_POST_AS_ANONYMOUS_DESC = "이 게시물은 민감한 정보를 담고 있습니다. 이 게시물에서 사용자 정보는 모두 제거하세요."
-COM_KUNENA_POST_EMAIL_NEVER = "당신의 이메일 주소는 싸이트에 절대로 제시되지 않습니다."
+COM_KUNENA_POST_EMAIL_NEVER = "귀하의 이메일 주소는 사이트에 공개되지 않습니다."
 COM_KUNENA_POST_EMAIL_REGISTERED = "당신의 이메일 주소는 등록된 사용자만 볼 수 있습니다."
 COM_KUNENA_POST_NOTIFIED = "댓글 알림 기능을 활성화 시키기 위해서는 이 박스를 체크하여 주십시오."
 COM_KUNENA_POST_SUBSCRIBE = "구독"
