--- a/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/ko-KR/ko-KR.com_kunena.tpl_blue_eagle.ini
@@ -67,8 +67,8 @@ COM_KUNENA_GEN_GOTO = "다음으로 이동"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/default_message_actions.php
 
-COM_KUNENA_REPORT = "모더레이터에게 신고"
-COM_KUNENA_THANKYOU = "다음 사용자들이 당신에게 감사말 전했습니다."
+COM_KUNENA_REPORT = "중재자에게 신고"
+COM_KUNENA_THANKYOU = "다음의 사용자들이 귀하에게 감사의 말을 전합니다."
 COM_KUNENA_THANKYOU_MORE_USERS = "그리고 이 사용자는 %s 분의 다른 사용자들도 감사 표시를 했습니다."
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/default_pollresults.php
@@ -81,12 +81,12 @@ COM_KUNENA_EDITOR_ADD_FILE = "파일추가"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/edit_history.php
 
-COM_KUNENA_POST_TOPIC_HISTORY = "다음 주제의 히스토리"
+COM_KUNENA_POST_TOPIC_HISTORY = "다음 주제의 역사"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/moderate.php
 
 COM_KUNENA_POST_MODERATION_PROCEED = "진행하기"
-COM_KUNENA_TITLE_MODERATE_MESSAGE = "모더레이터 메시지"
+COM_KUNENA_TITLE_MODERATE_MESSAGE = "중재자 메세지"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topics/
 
