--- a/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.ini
+++ b/components/com_kunena/site/language/nb-NO/nb-NO.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrollpanel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Administrere kategorier"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Skriv til kategori."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Merk emne lest"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Merke alle emnene i denne kategori som lest."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Abonnér"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Abonner på denne kategorien."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Stopp abonnement på emne"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Utestengelshistorie"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
