--- a/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
+++ b/components/com_kunena/site/language/nl-NL/nl-NL.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Controle paneel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Beheer categorieën"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Open categorie manager"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Markeer onderwerpen als gelezen"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Markeer alle onderwerpen in deze categorie als gelezen."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Abonneer"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Abonneer op deze categorie."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Uitschrijven categorie"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Je bericht wordt geplaatst als 'Gas
 COM_KUNENA_META_PROFILE="%s is op %s. Om te verbinden met %s, treed vandaag toe tot %s."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profiel niet opgeslagen"
 COM_KUNENA_PROFILE_SAVE_ERROR="Fout bij opslaan van profiel"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Berichten hebben aandacht nodig"
