--- a/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.ini
+++ b/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Painel de controlo"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Gerir categorias"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Entrar no gestor de categorias."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Marcar Tópicos como Lidos"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Marcar como lidos todos os tópicos nesta categoria."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Subscrever"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Subscrever esta categoria."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Remover subscrição"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong> NOTA: </strong>: Está a colocar a mensagem como 
 COM_KUNENA_META_PROFILE="%s está em %s. Para se ligar a %s, junte-se %s hoje."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Perfil não guardado"
 COM_KUNENA_PROFILE_SAVE_ERROR="Erro ao guardar o perfil"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
