--- a/components/com_kunena/site/language/sr-YU/sr-YU.com_kunena.ini
+++ b/components/com_kunena/site/language/sr-YU/sr-YU.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrolni Panel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Uredi Kategorije"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Pristupi Menadžeru kategorija"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Označi Teme kao pročitane"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Označi sve teme u ovoj kategoriji kao prošitane."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Pretplati se"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Pretplati se na ovu kategoriju."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Otkaži pretplatu"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Objavljujete poruku kao 'Gost'"
 COM_KUNENA_META_PROFILE="%s je uključen %s. Da se povežete sa %s, pridružite nam se %s danas."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
