--- a/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.ini
@@ -23,7 +23,7 @@ COM_KUNENA_A_ACCESSTYPE_DESC = "Åtkomstkontrolltyp att användas i denna katego
 COM_KUNENA_A_ACCESSTYPE_TITLE = "Åtkomstkontrolltyp:"
 COM_KUNENA_A_CATEGORY_ALIAS = "Alias:"
 COM_KUNENA_A_DISPLAY = "Visa #"
-COM_KUNENA_A_POLL_CATEGORIES_ALLOWED = "Aktivera omröstning i dessa kategorier"
+COM_KUNENA_A_POLL_CATEGORIES_ALLOWED = "Tillåt omröstningar"
 COM_KUNENA_A_POLL_CATEGORIES_ALLOWED_DESC = "Sätt till <em>Ja</em>, om du vill tillåta omröstningar i denna kategori."
 COM_KUNENA_BASICSFORUMINFO = "Kategorinamn och beskrivning"
 COM_KUNENA_BY = "av"
@@ -135,7 +135,7 @@ COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Du kan droppa filer här el
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Misslyckades flytta avatarfill till mediabibliotek"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Storleken på avatarfilen överstiger tillåten storlek"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "Storleken på bilagan överskrider tillåten storlek"
-; COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Attachment image size exceed limit allowed by configuration"
+COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Bildbilagans storlek överskrider det tillåtna värdet i inställningarna"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrollpanel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Hantera kategorier"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Lägg till i kategorihanteraren."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Markera ämnen lästa"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Markera alla ämnen i denna kategori som lästa."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Prenumerera"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Prenumerera på denna kategori."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Avsluta prenumeration"
@@ -230,8 +230,8 @@ COM_KUNENA_A_GEN_NEWCHAR = "NY"
 COM_KUNENA_BACK = "Tillbaka"
 COM_KUNENA_DELETE = "Radera"
 COM_KUNENA_EDITOR_HELPLINE_OPTION = "Omröstning: Alternativ för omröstningen"
-COM_KUNENA_ERROR_SESSION_SAVE_FAILED = "Kunena: Misslyckades med att spara sessionsinformation!"
-COM_KUNENA_GEN_MODERATED = "Forumet är modererat. Utvärderas innan det publiceras."
+COM_KUNENA_ERROR_SESSION_SAVE_FAILED = "Kunena: Misslyckades att spara sessionsinformation!"
+COM_KUNENA_GEN_MODERATED = "Forumet är modererat. Kontrolleras före publicering."
 COM_KUNENA_MANAGE_ATTACHMENTS = "Bilagehanterare"
 COM_KUNENA_MYPROFILE_GENDER_FEMALE = "Kvinna"
 COM_KUNENA_MYPROFILE_GENDER_MALE = "Man"
@@ -287,7 +287,7 @@ COM_KUNENA_MESSAGE_CREATED="skapade ämne:"
 COM_KUNENA_MESSAGE_REPLIED="Svarade på ämne:"
 COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Du publicerar meddelandet som 'Gäst'"
 COM_KUNENA_META_PROFILE="%s är på %s. För att ansluta med %s, anslut %s idag."
-; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
-; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
-; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
+COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil inte sparad"
+COM_KUNENA_PROFILE_SAVE_ERROR="Fel när profil sparades"
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
+COM_KUNENA_TOPICS_NEEDS_ATTENTION="Ämnen behöver uppmärksamhet"
