--- a/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.models.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.com_kunena.models.ini
@@ -13,8 +13,8 @@
 
 COM_KUNENA_APPROVE_SELECTED = "Godkänn valda"
 COM_KUNENA_BULK_CHOOSE_ACTION = "- Välj Åtgärd -"
-COM_KUNENA_BUTTON_PERMDELETE_LONG = "Permanent radera inlägg"
-COM_KUNENA_BUTTON_UNDELETE_LONG = "Återställ av misstag raderat inlägg"
+COM_KUNENA_BUTTON_PERMDELETE_LONG = "Radera permanent är valt"
+COM_KUNENA_BUTTON_UNDELETE_LONG = "Återställ är valt"
 COM_KUNENA_DELETE_SELECTED = "Radera utvalda"
 COM_KUNENA_MOVE_SELECTED = "Flytta markerade"
 COM_KUNENA_UNSUBSCRIBE_SELECTED = "Utvalda avsluta prenumeration"
