--- a/components/com_kunena/site/language/sv-SE/sv-SE.mod_kunenamenu.ini
+++ b/components/com_kunena/site/language/sv-SE/sv-SE.mod_kunenamenu.ini
@@ -14,11 +14,11 @@ MOD_KUNENAMENU_FIELD_ALLCHILDREN_DESC = "Expandera menyn och låt alltid underme
 MOD_KUNENAMENU_FIELD_ALLCHILDREN_LABEL = "Visa artiklar från Undermeny"
 MOD_KUNENAMENU_FIELD_CLASS_DESC = "Ett suffix som skall tillämpas på CSS-klassen hos menyelementen"
 MOD_KUNENAMENU_FIELD_CLASS_LABEL = "Meny Klass Suffix"
-MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC = "Nivå för att stoppa gör menyn på. Om du väljer "_QQ_"Alla"_QQ_" kommer alla nivåer att visas beroende på "_QQ_"Visa undermenyn"_QQ_" inställning."
+MOD_KUNENAMENU_FIELD_ENDLEVEL_DESC = "Nivå för att stoppa gör menyn på. Om du väljer 'Alla' kommer alla nivåer att visas beroende på 'Visa undermenyn' inställning."
 MOD_KUNENAMENU_FIELD_ENDLEVEL_LABEL = "Slutnivå"
 MOD_KUNENAMENU_FIELD_MENUTYPE_DESC = "Välj en meny i listan"
 MOD_KUNENAMENU_FIELD_MENUTYPE_LABEL = "Välj meny"
-MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC = "Nivå för att börja göra menyn på. Om fastställande av start-och slut nivåerna till samma # och inställningen "_QQ_"Visa undermenyn"_QQ_" till JA kommer endast en enda meny att visas."
+MOD_KUNENAMENU_FIELD_STARTLEVEL_DESC = "Nivå för att börja göra menyn på. Om fastställande av start-och slut nivåerna till samma # och inställningen 'Visa undermenyn' till JA kommer endast en enda meny att visas."
 MOD_KUNENAMENU_FIELD_STARTLEVEL_LABEL = "Startnivå"
 MOD_KUNENAMENU_FIELD_TAG_ID_DESC = "Ett ID-attribut att tilldela rootens UL-etikett för menyn (tillval)"
 MOD_KUNENAMENU_FIELD_TAG_ID_LABEL = "Menyetikett-ID"
