--- a/components/com_kunena/site/language/ug-CN/ug-CN.com_kunena.ini
+++ b/components/com_kunena/site/language/ug-CN/ug-CN.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "باشقۇرۇش سۇپىسى"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "سەھىپە باشقۇرۇش"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "سەھىپە باشقۇرۇشقا كىرىش"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "بۇ سەھىپىگە ئوقۇلغانلىق بەلگىسى قويۇش"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "ھەممە سەھىپىگە ئوقۇلغانلىق بەلگىسى قويۇش"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "زاكاس"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "بۇ سەھىپىنى زاكاس قىلىش"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "زاكاسنى ئەمەلدىن قالدۇرۇش"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="پېچەتلەش تارىخى"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
