--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Панель керування"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Менеджер категорій"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Увійти в керування категоріями."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Позначити тему прочитанною"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Позначити усі теми в цій категорії прочитаними."
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Позначити всі теми в цій категорії прочитаними."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Підписатись"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Підписатись на цю категорію."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Відписатись"
@@ -178,8 +178,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT = "Поскаржитись"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Поскаржитись на це повідомлення модераторам."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Дякую"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Я хочу подякувати за це повідомлення."
-; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Unthank You"
-; COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "I want to unthank you for this message."
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Відмінити подяку"
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "Я хочу відмінити подяку до цього повідомлення."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Відновити"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Відновити це повідомлення."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Позначити всі категорії прочитанними"
@@ -245,9 +245,9 @@ COM_KUNENA_TOGGLER_EXPAND = "Розгорнути"
 COM_KUNENA_USRL_SEARCH = "Пошук користувача"
 
 COM_KUNENA_ALERT_WARNING_X = "Попередження: %s"
-; COM_KUNENA_ALERT_ERROR_X = "Error: %s"
-; COM_KUNENA_ALERT_SUCCESS_X = "Success: %s"
-; COM_KUNENA_ALERT_INFO_X = "Info: %s"
+COM_KUNENA_ALERT_ERROR_X = "Помилок: %s"
+COM_KUNENA_ALERT_SUCCESS_X = "Вдало: %s"
+COM_KUNENA_ALERT_INFO_X = "Стан: %s"
 
 COM_KUNENA_LIB_TIME_NOW = "Щойно"
 COM_KUNENA_LIB_TIME_AGO = "%s тому"
@@ -276,18 +276,18 @@ COM_KUNENA_STATUS_TOOLONG = "Текст статусу занадто довги
 COM_KUNENA_STATUS_SAVED = "Текст статусу успішно збережено"
 COM_KUNENA_STATUS_MESSAGE = "Установити повідомлення статусу"
 COM_KUNENA_STATUS_TYP = "Надрукуйте ваше повідомлення нижче"
-; COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
-; COM_KUNENA_GO_TO_EDITOR="Go to editor.."
+COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "МБ"
+COM_KUNENA_GO_TO_EDITOR="Перейти до редактора.."
 COM_KUNENA_REPORT_CLOSEMODAL_LABEL="Зачинити"
 COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Історія покарань"
-; COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Move Options"
-; COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Basic Info"
-; COM_KUNENA_STATUS="Status Text"
-; COM_KUNENA_MESSAGE_CREATED="created the topic:"
-; COM_KUNENA_MESSAGE_REPLIED="replied the topic:"
-; COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'Guest'"
+COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Більше опцій"
+COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Основна інформація"
+COM_KUNENA_STATUS="Текст стану"
+COM_KUNENA_MESSAGE_CREATED="створено тему:"
+COM_KUNENA_MESSAGE_REPLIED="відповідей в темі:"
+COM_KUNENA_GEN_GUEST="<strong>ІНФО</strong>: Ви розміщуєте допис як 'Гість'"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
