--- a/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.ini
+++ b/components/com_kunena/site/language/zh-TW/zh-TW.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "控制台"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "分類管理"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "輸入到分類管理"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "將話題設為已讀"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "將這分類中的所有話題都設為已讀"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "訂閱"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "訂閱本分類"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "退訂"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="停權歷史"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
