--- a/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/az-AZ/az-AZ.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Avatarın keyfiyyəti"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="E-mail  tələb edilir"
-COM_KUNENA_A_ASK_EMAIL_DESC="<em>Bəli</em> seçsəniz istifadəçi və ya qonaq rəy etmək üçün e-mail daxil etməlidir.<em>Xeyr</em> seçsəniz bu xüsusiyyət  nəzərə alınacaq . İstifadəçilərə e-mail tələb edilməyəcək"
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Əlavələrin limiti"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Editorda əlavə sayını limitlə"
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
