--- a/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Größe anpassem (Normal - Schneller)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Besser - Schnell)"
 COM_KUNENA_RESIZE_BICUBIC="Bikubisch (Beste - Langsam)"
 COM_KUNENA_A_ASK_EMAIL="E-Mail benötigt"
-COM_KUNENA_A_ASK_EMAIL_DESC="Soll die E-Mail-Adresse benötigt werden, wenn Benutzer oder Besucher eine Nachricht schreiben wollen? Wähle <em>Nein</em>, um diese Funktion zu deaktivieren. Beitragsschreiber werden nicht nach ihrer E-Mail Adresse gefragt."
+COM_KUNENA_A_ASK_EMAIL_DESC="Soll die E-Mail-Adresse benötigt werden, wenn Benutzer oder Besucher eine Nachricht schreiben wollen? Auf <em>Nein</em> setzen, wenn diese Funktion ausgeschaltet werden soll. Schreiber werden nicht nach ihrer E-Mail Adresse gefragt."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Anhanglimit"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limitiert die Anzahl der Anhänge im Editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Anhänge schützen"
@@ -278,7 +278,7 @@ COM_KUNENA_A_POLL_SHOW_USER_LIST_DESC="Eine Liste aller Benutzer anzeigen, die i
 COM_KUNENA_A_POLL_TIME_VOTES="Zeit zwischen aufeinanderfolgende Abstimmungen"
 COM_KUNENA_A_POLL_TIME_VOTES_DESC="Um eine Überlastung deines Servers zu vermeiden, kannst du hier die Zeit zwischen zwei Abstimmungen eines Benutzers festlegen. Beispiel: 00:15:00 bedeutet 15 Minuten zwischen zwei Abstimmungen."
 COM_KUNENA_A_POLL_TITLE="Umfrageneinstellungen"
-COM_KUNENA_A_PUBWRITE="Öffentliches Lesen/Schreiben"
+COM_KUNENA_A_PUBWRITE="Öffentliches Schreiben"
 COM_KUNENA_A_PUBWRITE_DESC="Wähle &bdquo;Ja&ldquo;, um der Öffentlichkeit Schreibrechte zu gewähren. Auf &bdquo;Nein&ldquo; setzen, damit Besucher Beiträge lesen, aber nicht schreiben können."
 COM_KUNENA_A_RANKING="Rangsystem"
 COM_KUNENA_A_RANKINGIMAGES="Rangbilder benutzen"
