--- a/components/com_kunena/admin/language/eo-XX/eo-XX.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/eo-XX/eo-XX.com_kunena.sys.ini
@@ -11,17 +11,17 @@
 
 ; JROOT/administrator/components/com_kunena/kunena.
 
-; COM_KUNENA_CATEGORY_MANAGER="Categories"
+COM_KUNENA_CATEGORY_MANAGER="Kategorioj"
 COM_KUNENA_CONFIGURATION="Agordo"
 COM_KUNENA_DASHBOARD="Stirpanelo"
-; COM_KUNENA_EMOTICON_MANAGER="Emoticons"
-; COM_KUNENA_FILE_MANAGER="Attachments"
-; COM_KUNENA_FORUM_TOOLS="Tools"
-; COM_KUNENA_PLUGIN_MANAGER="Plugins"
-; COM_KUNENA_RANK_MANAGER="Ranks"
-; COM_KUNENA_TEMPLATE_MANAGER="Templates"
-; COM_KUNENA_TRASH_MANAGER="Trashbin"
-; COM_KUNENA_USER_MANAGER="Users"
+COM_KUNENA_EMOTICON_MANAGER="Mienetoj"
+COM_KUNENA_FILE_MANAGER="Alkroĉaĵoj"
+COM_KUNENA_FORUM_TOOLS="Iloj"
+COM_KUNENA_PLUGIN_MANAGER="Kromaĵoj"
+COM_KUNENA_RANK_MANAGER="Rangoj"
+COM_KUNENA_TEMPLATE_MANAGER="Ŝablonoj"
+COM_KUNENA_TRASH_MANAGER="Rubujo"
+COM_KUNENA_USER_MANAGER="Uzantoj"
 
 COM_KUNENA_SYS_BUTTON_FILTERSUBMIT="Filtrilo"
 COM_KUNENA_SYS_BUTTON_FILTERRESET="Nuligi"
@@ -33,8 +33,8 @@ COM_KUNENA_XML_DESCRIPTION="Kunena Forumo"
 
 ; JROOT/administrator/components/com_kunena/users/
 
-; COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="All topic subscriptions are deleted"
-; COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="All category subscriptions are deleted"
+COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="Ĉiu tema abono forigata"
+COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="Ĉiu kategoria abono forigata"
 
 
 ; JROOT/components/com_kunena/views/**/*.xml
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Elekti vidon"
 COM_KUNENA_MENU_TOPIC_CREATE="Krei temon"
 COM_KUNENA_MENU_TOPIC_EDIT="Redakti temon"
 COM_KUNENA_MENU_TOPIC_REPLY="Respondi temon"
-; COM_KUNENA_MENU_USERID="UserId"
+COM_KUNENA_MENU_USERID="UzantID"
 COM_KUNENA_SHOW_12_HOURS="12 horoj"
 COM_KUNENA_SHOW_24_HOURS="24 horoj"
 COM_KUNENA_SHOW_48_HOURS="48 horoj"
@@ -260,8 +260,8 @@ COM_KUNENA_TOPICS_MODE_OPTION_UNAPROVED="Neaprobitaj temoj"
 
 ; JROOT/components/com_kunena/views/topics/tmpl/moderator.xml
 
-; COM_KUNENA_MENU_TOPICS_MODERATOR="Moderator Topics"
-; COM_KUNENA_MENU_TOPICS_MODERATOR_DESC="Displays recent topics which haven't been replied by moderators."
+COM_KUNENA_MENU_TOPICS_MODERATOR="Moderantaj temoj"
+COM_KUNENA_MENU_TOPICS_MODERATOR_DESC="Montras novaj temoj neresponditaj de moderantoj."
 
 ; JROOT/components/com_kunena/views/topics/tmpl/posts.xml
 
