--- a/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Resize (Basic - más rápido)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolación (mejor - Fast)"
 COM_KUNENA_RESIZE_BICUBIC="Bicúbica (mejor - más lento)"
 COM_KUNENA_A_ASK_EMAIL="Requerir E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Requiere una dirección de correo electrónico cuando los usuarios o los visitantes creen un tema. Establézcalo a <em>No</em>, si desea que esta característica sea omitida en la interfaz delantera. No se les pedirá su dirección e-mail a los creadores de temas."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limite de Adjuntos"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limite de archivos adjuntos que pueden agregarse en el editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Proteger Adjuntos"
