--- a/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.sys.ini
@@ -11,17 +11,17 @@
 
 ; JROOT/administrator/components/com_kunena/kunena.
 
-; COM_KUNENA_CATEGORY_MANAGER="Categories"
+COM_KUNENA_CATEGORY_MANAGER="Kategooriad"
 COM_KUNENA_CONFIGURATION="Seadistamine"
 COM_KUNENA_DASHBOARD="Töölaud"
-; COM_KUNENA_EMOTICON_MANAGER="Emoticons"
-; COM_KUNENA_FILE_MANAGER="Attachments"
-; COM_KUNENA_FORUM_TOOLS="Tools"
-; COM_KUNENA_PLUGIN_MANAGER="Plugins"
-; COM_KUNENA_RANK_MANAGER="Ranks"
-; COM_KUNENA_TEMPLATE_MANAGER="Templates"
-; COM_KUNENA_TRASH_MANAGER="Trashbin"
-; COM_KUNENA_USER_MANAGER="Users"
+COM_KUNENA_EMOTICON_MANAGER="Emotikonid"
+COM_KUNENA_FILE_MANAGER="Lisatud failid"
+COM_KUNENA_FORUM_TOOLS="Töövahendid"
+COM_KUNENA_PLUGIN_MANAGER="Pluginad"
+COM_KUNENA_RANK_MANAGER="Tiitlid"
+COM_KUNENA_TEMPLATE_MANAGER="Kujundused"
+COM_KUNENA_TRASH_MANAGER="Prügikast"
+COM_KUNENA_USER_MANAGER="Kasutajad"
 
 COM_KUNENA_SYS_BUTTON_FILTERSUBMIT="Filter"
 COM_KUNENA_SYS_BUTTON_FILTERRESET="Taasta"
