--- a/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Koonmuutos (Perus - Nopeampi)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolointi (Parempi - Nopea)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Paras - Hidas)"
 COM_KUNENA_A_ASK_EMAIL="Vaadi sähköpostiosoite"
-COM_KUNENA_A_ASK_EMAIL_DESC="Vaaditaanko viestin kirjoittajalta sähköpostiosoite? Valitse <em>Ei</em> jos sähköpostiosoitetta ei vaadita."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Rajoita liitetiedostoja"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Rajoita liitetiedostojen määrää editorissa."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Suojaa liitteet"
