--- a/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.libraries.ini
@@ -15,7 +15,7 @@ COM_KUNENA_UNPUBLISHED="Letiltva"
 ; JROOT/administrator/components/com_kunena/libraries/
 
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS="Ki vagy tiltva! Nincs hozzáférésed ehhez a funkcióhoz."
-COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS_EXPIRY="Ki vagy tiltva eddig az időpontig: %s"
+COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS_EXPIRY="Ki vagy tiltva %s  időpontig."
 COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="<em>A csatolmány rejtve van a vendégek elől.<br />Jelentkezz be vagy regisztrálj, hogy láthasd.</em>"
 COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="<em>A kép rejtve van a vendégek elől.<br />Jelentkezz be vagy regisztrálj, hogy láthasd.</em>"
 
@@ -37,8 +37,8 @@ COM_KUNENA_BBCODE_HIDDENTEXT="<span class="_QQ_"kquote"_QQ_">Vendégek elől rej
 COM_KUNENA_BBCODE_HIDE_IN_MESSAGE="Vendégek elől elrejtve"
 COM_KUNENA_BBCODE_SPOILER="Figyelem: Spoiler!"
 COM_KUNENA_FILEATTACH="Melléklet:"
-COM_KUNENA_GOOGLE_MAP_NOT_VISIBLE="A Google Map nem megjeleníthető."
-COM_KUNENA_GOOGLE_MAP_NO_GEOCODE="Az alábbi hely meghatározása sikertelen:"
+COM_KUNENA_GOOGLE_MAP_NOT_VISIBLE="A Google Map nem jeleníthető meg."
+COM_KUNENA_GOOGLE_MAP_NO_GEOCODE="A helymeghatározás sikertelen:"
 COM_KUNENA_LIB_BBCODE_ARTICLE_ERROR_NO_PERMISSIONS="Ez az üzenet egy cikket tartalmaz, de nincs engedélyed megnézni."
 COM_KUNENA_LIB_BBCODE_ARTICLE_ERROR_UNPUBLISHED="A cikk nem jeleníthető meg"
 COM_KUNENA_LIB_BBCODE_ARTICLE_MORE="Bővebben..."
@@ -193,14 +193,14 @@ COM_KUNENA_POST_EMAIL_NOTIFICATION_MORE_SUBSCRIBE="További értesítőt az új 
 COM_KUNENA_POST_ERROR_DELETE_REPLY_AFTER="Nem törölheted a saját hozzászólásod, valaki választ küldött időközben."
 COM_KUNENA_THANKYOU_DISABLED="A köszöneteket letiltotta az admin."
 COM_KUNENA_VIEW_POSTED="Beküldő"
-; COM_KUNENA_POST_ATTACHMENTS_FILES_NOT_ALLOWED="Posting attachments files isn't allowed"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_ADMINISTRATORS="Posting attachments files is allowed only for administrators"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_REGISTERED_USERS="Posting attachments files is allowed only for registred users"
-; COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_MODERATORS="Posting attachments files is allowed only for moderators"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_NOT_ALLOWED="Posting attachments images isn't allowed"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_ADMINISTRATORS="Posting attachments images is allowed only for administrators"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_REGISTERED_USERS="Posting attachments images is allowed only for registred users"
-; COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_MODERATORS="Posting attachments images is allowed only for moderators"
+COM_KUNENA_POST_ATTACHMENTS_FILES_NOT_ALLOWED="Csatolt fájlok beküldése nem megengedett"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_ADMINISTRATORS="Csatolt fájlok beküldése csak adminisztrátorok számára megengedett"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_REGISTERED_USERS="Csatolt fájlok beküldése csak regisztrált felhasználók számára megengedett"
+COM_KUNENA_POST_ATTACHMENTS_FILE_ONLY_FOR_MODERATORS="Csatolt fájlok beküldése csak moderátorok számára megengedett"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_NOT_ALLOWED="Csatolt képfájlok beküldése nem megengedett"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_ADMINISTRATORS="Csatolt képfájlok beküldése csak adminisztrátorok számára megengedett"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_REGISTERED_USERS="Csatolt képfájlok beküldése csak regisztrált felhasználók számára megengedett"
+COM_KUNENA_POST_ATTACHMENTS_IMAGES_ONLY_FOR_MODERATORS="Csatolt képfájlok beküldése csak moderátorok számára megengedett"
 
 ; JROOT/administrator/components/com_kunena/libraries/forum/message/thankyou/thankyou.php
 
