--- a/components/com_kunena/admin/language/ko-KR/ko-KR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ko-KR/ko-KR.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Avatar Quality"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Require E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when users or visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limit Attachments"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limit number of attachments in editor."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
