--- a/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Аватардың сапасы"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="E-mail-ды талап ету"
-COM_KUNENA_A_ASK_EMAIL_DESC="Қолданашыдан  хабар қосу кезінде E-mail мекенжайын енгізуді талап ету керек пе? Егер бұл тексерісті алып тастағыңыз келсе мынаны<em>Жоқ</em> орнатыңыз. Сайтқа кірушілерге E-mail мекенжайын енгізетін жол көрсетілмейтін болады."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Салымдар шегі"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Салымдар санын редакторда шектеу."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
