--- a/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Avataro kokybė"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Reikalauti el.pašto"
-COM_KUNENA_A_ASK_EMAIL_DESC="Reikalauti elektroninio pašto adreso, kai nariai ar lankytojai palieka pranešimą. Nustatykite <em>Ne</em>, jei norite, kad ši funkcija turi būti praleista išorinėje sąsajoje. Skelbėjų nebus prašoma el.pašto adreso."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Riboti priedus"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Apriboti priedų skaičių redaktoriuje."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Apsaugoti priedus"
