--- a/components/com_kunena/admin/language/nb-NO/nb-NO.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/nb-NO/nb-NO.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Kvalitet på profilbilde"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Krev e-post"
-COM_KUNENA_A_ASK_EMAIL_DESC="Krev e-postadresse når brukere eller besøkende skriver innlegg. Velg &quot;Nei&quot; dersom du vil deaktivere denne funksjonen. De som skriver innlegg vil ikke bli spurt om e-postadresse."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Antall vedlegg"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Begrens antall vedlegg i tekstbehandleren."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
