--- a/components/com_kunena/admin/language/nl-NL/nl-NL.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/nl-NL/nl-NL.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Schaal (Basis - Sneller)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolatie (Beter - Snel)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Beste - Langzaam)"
 COM_KUNENA_A_ASK_EMAIL="E-mailadres vereist"
-COM_KUNENA_A_ASK_EMAIL_DESC="Vereist een e-mailadres als gebruikers of bezoekers berichten plaatsen. Stel in op <em>Nee</em> als u deze optie wilt overslaan op het forum. Gebruikers zullen niet om een e-mailadres worden gevraagd."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limiteer bijlagen"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limiteer aantal bijlagen in editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Bescherm bijlagen"
