--- a/components/com_kunena/admin/language/ru-RU/ru-RU.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ru-RU/ru-RU.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Изменение размера (Обычное - О
 COM_KUNENA_RESIZE_INTERPOLATION="Интерполяция (Лучше - Быстро)"
 COM_KUNENA_RESIZE_BICUBIC="Бикубическая (Лучшее - Медленнее)"
 COM_KUNENA_A_ASK_EMAIL="Требовать E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Требовать от пользователя или посетителя ввода адреса электронной почты при добавлении сообщения? Выберите <em>Нет</em>, если хотите убрать эту проверку. Создателю сообщения не будет показано поле для ввода E-mail адреса."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Лимит вложений"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Предельное количество вложений в редакторе."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Защищать вложения"
