--- a/components/com_kunena/admin/language/sk-SK/sk-SK.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/sk-SK/sk-SK.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Zmeniť veľkosť (Základná - Rýchlejšia)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolácia (Lepšia - Rýchla)"
 COM_KUNENA_RESIZE_BICUBIC="Bikubická (Najlepšia - Pomalšia)"
 COM_KUNENA_A_ASK_EMAIL="Povinný E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Požadovať e-mailovú adresu, keď užívatelia alebo návštevníci pridávajú nový príspevok. Nastavte na <em>Nie</em> ak chcete túto funkciu preskočiť. Prispievatelia nebudú vyzvaní na zadanie e-mailovej adresy."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Limit Príloh"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Obmedziť počet príloh v editore."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Chrániť prílohy"
