--- a/components/com_kunena/admin/language/sr-YU/sr-YU.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/sr-YU/sr-YU.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_RESIZE_RESIZE="Resize (Basic - Faster)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Obavezna e-pošta"
-COM_KUNENA_A_ASK_EMAIL_DESC="Zahtevanje adrese e-pošte kada korisnici ili posetioci objavljuju poruku. Postavite na <em>Ne</em> ako želite da ova mogućnost bude prvobitno preskočena. Piscima poruka neće biti zahtevana adresa e-pošte."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Ograniči priloge"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Limit number of attachments in editor."
 COM_KUNENA_A_ATTACHMENT_PROTECTION="Zaštiti Priloge"
