--- a/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.views.ini
@@ -14,13 +14,13 @@
 ; COM_KUNENA_ATTACHMENTS_VIEW="Attachments"
 COM_KUNENA_A_AVATARS="Avatarer"
 COM_KUNENA_A_BASIC_SETTINGS="Grundinställningar"
-; COM_KUNENA_A_RANK_MANAGER="Ranks"
+COM_KUNENA_A_RANK_MANAGER="Rank"
 COM_KUNENA_A_START_UPLOAD="Starta uppladdning"
-; COM_KUNENA_A_TEMPLATE_MANAGER="Templates"
-; COM_KUNENA_A_TOPICICONS_MANAGER="Topic Icons"
-; COM_KUNENA_A_VIEW_TOOLS="Tools"
+COM_KUNENA_A_TEMPLATE_MANAGER="Mallar"
+COM_KUNENA_A_TOPICICONS_MANAGER="Ämnesikoner"
+COM_KUNENA_A_VIEW_TOOLS="Verktyg"
 COM_KUNENA_EMOTICONS_CODE="Kod"
-; COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emoticons"
+COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emotikoner"
 COM_KUNENA_GEN_DELETE="Radera"
 COM_KUNENA_RANKS="Rangtitel:"
 COM_KUNENA_REPORT_SYSTEM="Rapportera konfiguration"
@@ -47,7 +47,7 @@ COM_KUNENA_TABLEHEAD_OPTION="Alternativ"
 COM_KUNENA_TABLEHEAD_DESCRIPTION="Beskrivning"
 COM_KUNENA_FIELD_INPUT_SEARCH="Sök"
 COM_KUNENA_FILTERACTIVE="Inget att visa"
-; COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Tools"
+COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Verktyg"
 COM_KUNENA_FIELD_LABEL_UNPUBLISHED="Opublicerade"
 COM_KUNENA_FIELD_LABEL_PUBLISHED="Publicerad"
 ; COM_KUNENA_FIELD_LABEL_ARCHIVED="Archived"
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Avatarkvalitet"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Kräv e-post"
-COM_KUNENA_A_ASK_EMAIL_DESC="Kräv en e-postadress när användare eller besökare gör ett inlägg. Sätt till <em>Nej</em> om du vill att funktionen ska hoppas över på Framsidan. Inläggare kommer inte att tillfrågas om sin e-postadress."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Begränsa bilagor"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Begränsning på antalet bilagor i editorn."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
