--- a/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Miniresim Kalitesi"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="E-posta Gerekli"
-COM_KUNENA_A_ASK_EMAIL_DESC="<em>Evet</em>i seçerseniz, kullanıcı veya ziyaretçi gönderi yapmak için e-postasını girmelidir. <em>Hayır</em>ı seçerseniz, bu özellik atlanacaktır. Göndericilere e-posta adresleri sorulmayacaktır."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Dosya Ekleri Sınırı"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Editörde eklenti sayısını sınırla"
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
