--- a/components/com_kunena/admin/language/ug-CN/ug-CN.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ug-CN/ug-CN.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="باش سۈرىتىنىڭ سۈپىتى"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="ئېلخەت بىلەن تەمىنلەش تەلەپ قىلىنىدۇ"
-COM_KUNENA_A_ASK_EMAIL_DESC="ئەزا ياكى زىيارەتچى يازما يوللىغاندا ئۇلارنىڭ ئېلخەت ئادرېسى بىلەن تەمىنلىشىنى تەلەپ قىلىش. ئەگەر <b>ياق</b> تاللانسا تەلەپ قىلىنمايدۇ."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="قوشۇمچىنى چەكلەش"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="تەھرىرلىگۈچتىكى قوشۇمچىنىڭ سانىنى چەكلەش. "
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
