--- a/components/com_kunena/admin/language/uk-UA/uk-UA.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/uk-UA/uk-UA.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="Якість аватару"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="Потребує E-mail"
-COM_KUNENA_A_ASK_EMAIL_DESC="Потребує e-mail адреси коли користувачі або гості залишають повідомлення. Установіть <em>Ні</em>, якщо бажаєте вимкнути цю вимогу. Адреса електронної пошти не буде вимагатися."
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="Обмеження вкладень"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="Обмежує кількість вкладень в редакторі."
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
