--- a/components/com_kunena/admin/language/zh-CN/zh-CN.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/zh-CN/zh-CN.com_kunena.views.ini
@@ -147,7 +147,7 @@ COM_KUNENA_AVATAR_QUALITY="头像质量"
 ; COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 ; COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
 COM_KUNENA_A_ASK_EMAIL="需电子邮件"
-COM_KUNENA_A_ASK_EMAIL_DESC="当用户或来访者发帖时需要填写电子邮件。如果您想该功能在前台可写略过，则设置为<em>否</em>。发帖者不会被要求填写电子邮件。"
+; COM_KUNENA_A_ASK_EMAIL_DESC="Require an e-mail address when visitors make a post. Set to <em>No</em> if you want this feature to be skipped on the front end. Posters will not be asked for their e-mail address."
 COM_KUNENA_A_ATTACHMENT_LIMIT="附件限制"
 COM_KUNENA_A_ATTACHMENT_LIMIT_DESC="限制在编辑器中的附件的数量。"
 ; COM_KUNENA_A_ATTACHMENT_PROTECTION="Protect Attachments"
