--- a/components/com_kunena/site/language/af-ZA/af-ZA.com_kunena.ini
+++ b/components/com_kunena/site/language/af-ZA/af-ZA.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Beheer sentrum"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Bestuur kategoriee"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Gaan kategorie bestuur binne."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Merk onderwerp as gelees."
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Merk alle onderwerpe in die kategorie as gelees"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Teken aan(subscribe)"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Teken aan(subscribe) vir hierdie kategorie."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Kanseleer subskribsie(unsubscribe)"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Verbannings geskiedenis"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
