--- a/components/com_kunena/site/language/el-GR/el-GR.com_kunena.ini
+++ b/components/com_kunena/site/language/el-GR/el-GR.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Πίνακας Ελέγχου"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Διαχείριση Κατηγοριών"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Είσοδος στη Διαχείριση Κατηγοριών."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Σημανση θεματων ως αναγνωσμενων"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Σήμανση όλων των δημοσιεύσεων σ' αυτή τη κατηγορία ως αναγνωσμένων."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Συνδρομή"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Συνδρομή στην κατηγορία."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Διαγραφη Συνδρομης"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Ιστορικό Αποκλεισμώ
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
