--- a/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.controllers.ini
@@ -80,7 +80,7 @@ COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "Temo sukcese restaŭrita."
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Vi ŝanĝis vian voĉdonon!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Voĉdonoj sukcese agorditaj"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Vi voĉdonis!"
-; COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="You have to many links in your message, please decrease it!"
+COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Vi havas tro da ligoj en via mesaĝo, bonvolu malgrandigi ĝin!"
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
