--- a/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.tpl_blue_eagle.ini
@@ -14,8 +14,8 @@
 COM_KUNENA_FAVORITE = "Ŝatato"
 COM_KUNENA_MYPOSTS = "Enhavas miajn noticojn"
 COM_KUNENA_TOPIC_STARTED_ON = "Temo komencita"
-COM_KUNENA_VIEW_NO_POSTS = "Ne troviĝas noticoj en tiu ĉi kategorio"
-COM_KUNENA_VIEW_NO_TOPICS = "Ne troviĝas iun temon por montri."
+COM_KUNENA_VIEW_NO_POSTS = "Troviĝas neniu notico en tiu ĉi kategorio."
+COM_KUNENA_VIEW_NO_TOPICS = "Troviĝas neniu temo por montri."
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/default.php
 
@@ -24,7 +24,7 @@ COM_KUNENA_GEN_GOTOBOTTOM = "Iri al butono"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/list.php
 
-COM_KUNENA_GEN_MARK_ALL_FORUMS_READ = "Marki ĉiuj temoj legita"
+COM_KUNENA_GEN_MARK_ALL_FORUMS_READ = "Marki ĉiujn temojn legitaj"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/list_embed.php
 
@@ -47,7 +47,7 @@ COM_KUNENA_STAT_USERLIST = "Uzantlisto"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/search/default.php
 
-COM_KUNENA_FORUM_SEARCHRESULTS = "Montras %s de %s rezultoj."
+COM_KUNENA_FORUM_SEARCHRESULTS = "Montras %s el %s rezultoj."
 COM_KUNENA_SEARCH_ANSWERS = "Respondoj"
 COM_KUNENA_SEARCH_FIND_WITH = "Trovi temojn kun"
 COM_KUNENA_SEARCH_LEAST = "Minimume"
@@ -68,12 +68,12 @@ COM_KUNENA_GEN_GOTO = "Iri al"
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/default_message_actions.php
 
 COM_KUNENA_REPORT = "Raporti al moderanto"
-COM_KUNENA_THANKYOU = "Tiuj diris Dankon"
+COM_KUNENA_THANKYOU = "Tiuj ĉi uzantoj Dankis"
 COM_KUNENA_THANKYOU_MORE_USERS = "kaj tiu ĉi uzanto havas %s aliajn dankojn"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/default_pollresults.php
 
-COM_KUNENA_TOPIC_VOTE_RESET = "Nuligi voĉdonoj"
+COM_KUNENA_TOPIC_VOTE_RESET = "Nuligi voĉdonojn"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/edit.php
 
@@ -98,7 +98,7 @@ COM_KUNENA_FILETYPE = "Tipo"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/user/default_ban.php
 
-COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "JJJJ-MM-TT - HH:MM:SS"
+COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "YYYY-MM-DD - HH:MM:SS"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/user/edit_avatar.php
 
@@ -106,7 +106,7 @@ COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Alŝuti novan avataron"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/user/list.php
 
-COM_KUNENA_USRL_REGISTERED_USERS = "%s havas <strong>%d</strong> registritaj uzantoj"
+COM_KUNENA_USRL_REGISTERED_USERS = "%s havas <strong>%d</strong> registritajn uzantojn"
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
@@ -118,11 +118,11 @@ COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC = "Difini la koloron de la foru
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Koloro de ŝvebita langeto"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Entajpi la koloron de la menulangeto kiam ŝvebita."
 COM_KUNENA_TEMPLATE_SKINNER = "Miksi kun Joomla ŝablono"
-COM_KUNENA_TEMPLATE_SKINNER_DESC = "Aŭtomate miksi la defaŭlta ŝablono kun la koloroj de via joomla ŝablono"
+COM_KUNENA_TEMPLATE_SKINNER_DESC = "Aŭtomate miksi la defaŭltan ŝablonon kun la koloroj de via joomla ŝablono."
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Baskuli koloron"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enigi la koloron de la sekcia baskuliga butono."
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Load Responsive CSS"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS = "Ŝargi alĝustiĝantan CSSn"
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC = "Ŝargi alĝustiĝantan CSSn por funkciigi la ŝablonon en porteblaj aparatoj. Tiu ĉi trajto bezonas alĝustiĝantan Joomlan ŝablonon por funkcii korekte."
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH = "Titola longo de lasta temo"
 COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Elekti la nombron de signoj por montri de la laste aldonita titolo en la kategoria vido"
 COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Koloro de Lightbox"
@@ -130,7 +130,7 @@ COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Elekti koloron de Lightbox"
 COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Blanka"
 COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Nigra"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Longo de mesaĝa titolo"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Maks. mesaĝa titola longo en mesaĝo"
 
 
 ; Removed strings
