--- a/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.views.ini
+++ b/components/com_kunena/site/language/eo-XX/eo-XX.com_kunena.views.ini
@@ -125,8 +125,8 @@ COM_KUNENA_SELECT_CATEGORY = "- Elekti kategorion -"
 COM_KUNENA_VIEW_DISABLED = "La administranto malpermesis la publikan skribrajton."
 COM_KUNENA_VIEW_TOPICS_DEFAULT = "Temo: %s"
 COM_KUNENA_VIEW_TOPIC_ERROR_LOOP = "Interna eraro: Iteracio detektita en movitaj temoj!"
-; COM_KUNENA_LOGIN_PLEASE = "Please %s %s to join the conversation."
-; COM_KUNENA_LOGIN_OR = "or"
+COM_KUNENA_LOGIN_PLEASE = "Bonvolu %s %s por veni al la konversacio."
+COM_KUNENA_LOGIN_OR = "aŭ"
 
 ; JROOT/components/com_kunena/views/topics/
 
@@ -165,7 +165,7 @@ COM_KUNENA_USER_SHOWONLINE = "Montri konektitaj"
 COM_KUNENA_VIEW_USER_DEFAULT = "Profiloj de %s"
 COM_KUNENA_VIEW_USER_EDIT_AUTH_FAILED = "Vi ne rajtas redakti la uzanton %s."
 COM_KUNENA_VIEW_USER_LIST = "Uzantlisto"
-; COM_KUNENA_LOGIN_SECRETKEY = "Secret Key"
-; COM_KUNENA_USER_CANSUBSCRIBE = "Select subscription as default"
-; COM_KUNENA_USER_USERLISTTIME = "Select the time limit for pages"
-; COM_KUNENA_USER_SETTINGS_CLEAR = "Clear Cache"
+COM_KUNENA_LOGIN_SECRETKEY = "Sekreta ŝlosilo"
+COM_KUNENA_USER_CANSUBSCRIBE = "Elekti abonon kiel defaŭlto"
+COM_KUNENA_USER_USERLISTTIME = "Elekti la vivdaŭron por paĝoj"
+COM_KUNENA_USER_SETTINGS_CLEAR = "Viŝi kaŝmemoron"
