--- a/components/com_kunena/site/language/et-EE/et-EE.com_kunena.ini
+++ b/components/com_kunena/site/language/et-EE/et-EE.com_kunena.ini
@@ -135,7 +135,7 @@ COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Sa võid faile siia lohista
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Avatari faili liigutamine meedia kausta ebaõnnestus"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Avatari failisuurus ületab seadistustes lubatud suuruse"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "Manuse suurus ületab seadistustes määratud limiidi"
-; COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Attachment image size exceed limit allowed by configuration"
+COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Lisatud failide suurus ületab seadistustes määratud limiidi"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Juhtpaneel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Halda kategooriaid"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Sisene kategooriate haldusse."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Märgi teemad loetuks"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Määra kõik teemad selles kategoorias loetuks."
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Märgi kõik teemad selles kategoorias loetuks."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Jälgi"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Jälgi seda kategooriat."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Lõpeta jälgimine"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Sa lisad selle sõnumi külalisena"
 COM_KUNENA_META_PROFILE="%s on %s-s. %s ühendumiseks liitu %s-ga."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profiil pole salvestatud"
 COM_KUNENA_PROFILE_SAVE_ERROR="Viga profiili salvestamisel"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "ja sellel kasutajal on %s muud tänamist"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Teemad, mis vajavad tähelepanu"
