--- a/components/com_kunena/site/language/eu-ES/eu-ES.com_kunena.ini
+++ b/components/com_kunena/site/language/eu-ES/eu-ES.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrol Panela"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Kategoriak Kudeatu"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Kategoria-Kudeatzailean sartu."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Gaiak irakurrita gisa markatu"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Markatu kategoria honetako gai guztiak irakurrita gisa."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Harpidetu"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Harpidetu kategoria honetan."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Harpidetza kendu"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Debekatutako historia"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
