--- a/components/com_kunena/site/language/hu-HU/hu-HU.com_kunena.ini
+++ b/components/com_kunena/site/language/hu-HU/hu-HU.com_kunena.ini
@@ -22,7 +22,7 @@ COM_KUNENA_ATTACH = "Melléklet"
 COM_KUNENA_A_ACCESSTYPE_DESC = "A kategóriához való hozzáférés típusa."
 COM_KUNENA_A_ACCESSTYPE_TITLE = "Hozzáférés típusa:"
 COM_KUNENA_A_CATEGORY_ALIAS = "Álnév:"
-COM_KUNENA_A_DISPLAY = "Mutass #"
+COM_KUNENA_A_DISPLAY = "Megjelenítendő #"
 COM_KUNENA_A_POLL_CATEGORIES_ALLOWED = "Szavazások engedélyezése"
 COM_KUNENA_A_POLL_CATEGORIES_ALLOWED_DESC = "<em>Igen</em> esetén ebben a kategóriában létrehozhatunk szavazásokat."
 COM_KUNENA_BASICSFORUMINFO = "Kategória név és leírás"
@@ -38,7 +38,7 @@ COM_KUNENA_CATEGORY_CHANNELS = "Kategória csatornák"
 COM_KUNENA_CATEGORY_CHANNELS_DESC = "A <em>Kategória csatornák</em> megengedik, hogy megválassza, mely témákat látják a felhasználók, amikor belépnek a kategóriába. Ez a szolgáltatás lehetővé teszi, hogy <strong>Kategória álneveket</strong>, <strong>Több kategóriás bejelentéseket</strong>, és <strong>Kategória gyűjteményeket</strong> hozzon létre."
 COM_KUNENA_CATEGORY_INFO = "Általános információ"
 COM_KUNENA_CATEGORY_PERMISSIONS = "Kategória engedélyek"
-COM_KUNENA_CATEGORY_SUBSCRIPTIONS = "Kategóriafeliratozások"
+COM_KUNENA_CATEGORY_SUBSCRIPTIONS = "Kategória feliratozások"
 COM_KUNENA_CATEGORY_TOPIC_ORDERING = "Témák rendezése"
 COM_KUNENA_CATEGORY_TOPIC_ORDERING_DESC = "Válaszd ki az alapértelmezett témasorrendet ebben a kategórián belül."
 COM_KUNENA_CATID = "AZ"
@@ -61,7 +61,7 @@ COM_KUNENA_GEN_REMOVE_FILE = "Fájl eltávolítása"
 COM_KUNENA_GEN_SUBJECT = "Tárgy"
 COM_KUNENA_GO = "Ugrás"
 COM_KUNENA_HEADERADD = "Kategória fejléc:"
-COM_KUNENA_LIB_HTML_DISPLAY_NUM = "Mutass #"
+COM_KUNENA_LIB_HTML_DISPLAY_NUM = "Megjelenítendő #"
 COM_KUNENA_LOCKED = "Lezárva"
 COM_KUNENA_LOCKED1 = "Zárolva:"
 COM_KUNENA_LOCKEDDESC = "<em>Igen</em> esetén a fórum zárolva lesz. Csak a moderátorok és adminisztrátorok hozhatnak létre új témákat vagy válaszolhatnak a zárolt fórumokban (vagy helyezhetnek át hozzászólásokat oda)."
@@ -76,7 +76,7 @@ COM_KUNENA_MYPROFILE_LOCATION = "Lakhely"
 COM_KUNENA_MYPROFILE_WEBSITE = "Weboldal"
 COM_KUNENA_NAMEADD = "Név:"
 COM_KUNENA_NO = "Nem"
-COM_KUNENA_NOMODS = "Nincsenek moderátorok rendelve a kategóriához"
+COM_KUNENA_NOMODS = "Nincsenek a kategóriához rendelt moderátorok"
 COM_KUNENA_NO_ACCESS = "Nincs jogosultságod az oldal eléréséhez!"
 COM_KUNENA_PAGE = "Oldal:"
 COM_KUNENA_PARENT = "Szülő:"
@@ -121,7 +121,7 @@ COM_KUNENA_USER_ORDER_DESC = "Új hozzászólások felülre"
 COM_KUNENA_USRL_AVATAR = "Profilkép"
 COM_KUNENA_USRL_HITS = "Találatok"
 COM_KUNENA_USRL_POSTS = "Hozzászólások"
-COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "A következő kategória megtekintése '%s'"
+COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE = "'%s' kategória megtekintése"
 COM_KUNENA_YES = "Igen"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS = "A bővítmények megengedik a profilkép feltöltését: %s"
 COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS = "Nincs jogosultságod a statisztika megtekintéséhez"
@@ -135,7 +135,7 @@ COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Húzd be ide a fájlokat, v
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "A profilkép a média könyvtárba való másolásakor hiba történt."
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "A profilkép mérete nagyobb, mint a beállításokban meghatározott limit."
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "A csatolt fájl mérete nagyobb, mint a beállításokban meghatározott limit."
-; COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Attachment image size exceed limit allowed by configuration"
+COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "A csatolt fájl mérete meghaladja a beállításokban meghatározott limitet."
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Vezérlőpult"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Kategóriák kezelése"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Belépés a kategória kezelőben."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Témák megjelölése olvasottként"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Minden téma olvasottnak jelölése ebben a kategóriában."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Feliratkozás"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Feliratkozás a kategóriára."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Leiratkozás"
@@ -168,7 +168,7 @@ COM_KUNENA_BUTTON_MESSAGE_MODERATE = "Moderálás"
 COM_KUNENA_BUTTON_MESSAGE_MODERATE_LONG = "Üzenet moderálása."
 COM_KUNENA_BUTTON_MESSAGE_PERMDELETE = "Törlés"
 COM_KUNENA_BUTTON_MESSAGE_PERMDELETE_LONG = "Üzenet végleges törlése."
-COM_KUNENA_BUTTON_MESSAGE_QUICKREPLY = "Gyors Válasz"
+COM_KUNENA_BUTTON_MESSAGE_QUICKREPLY = "Gyors válasz"
 COM_KUNENA_BUTTON_MESSAGE_QUICKREPLY_LONG = "Gyors válasz erre az üzenetre."
 COM_KUNENA_BUTTON_MESSAGE_QUOTE = "Idézet"
 COM_KUNENA_BUTTON_MESSAGE_QUOTE_LONG = "Üzenet idézése."
@@ -186,13 +186,13 @@ COM_KUNENA_BUTTON_SECTION_MARKREAD = "Összes kategória megjelölése olvasottk
 COM_KUNENA_BUTTON_TOPIC_CREATE = "Új téma"
 COM_KUNENA_BUTTON_TOPIC_CREATE_LONG = "Új téma létrehozása."
 COM_KUNENA_BUTTON_TOPIC_DELETE = "Téma törlése"
-COM_KUNENA_BUTTON_TOPIC_DELETE_LONG = "Téma törlése."
+COM_KUNENA_BUTTON_TOPIC_DELETE_LONG = "Ennek a témának a törlése."
 COM_KUNENA_BUTTON_TOPIC_FAVORITE = "Kedvenc"
 COM_KUNENA_BUTTON_TOPIC_FAVORITE_LONG = "Kedvenc téma."
 COM_KUNENA_BUTTON_TOPIC_LOCK = "Zárolás"
 COM_KUNENA_BUTTON_TOPIC_LOCK_LONG = "Téma zárolása."
-COM_KUNENA_BUTTON_TOPIC_MODERATE = "Téma Moderálása"
-COM_KUNENA_BUTTON_TOPIC_MODERATE_LONG = "Téma moderálása."
+COM_KUNENA_BUTTON_TOPIC_MODERATE = "Téma moderálása"
+COM_KUNENA_BUTTON_TOPIC_MODERATE_LONG = "Ennek a témának a moderálása."
 COM_KUNENA_BUTTON_TOPIC_REPLY = "Válasz"
 COM_KUNENA_BUTTON_TOPIC_REPLY_LONG = "Válasz erre a témára."
 COM_KUNENA_BUTTON_TOPIC_STICKY = "Kiemel"
@@ -200,7 +200,7 @@ COM_KUNENA_BUTTON_TOPIC_STICKY_LONG = "Téma kiemelése"
 COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE = "Feliratkozás"
 COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE_LONG = "Feliratkozás erre a témára."
 COM_KUNENA_BUTTON_TOPIC_UNFAVORITE = "Nem kedvenc"
-COM_KUNENA_BUTTON_TOPIC_UNFAVORITE_LONG = "Téma nem kedvencé tétele"
+COM_KUNENA_BUTTON_TOPIC_UNFAVORITE_LONG = "Téma nem kedvenccé tétele"
 COM_KUNENA_BUTTON_TOPIC_UNLOCK = "Felold"
 COM_KUNENA_BUTTON_TOPIC_UNLOCK_LONG = "Téma zárolása."
 COM_KUNENA_BUTTON_TOPIC_UNSTICKY = "Nem kiemelt"
@@ -229,16 +229,16 @@ COM_KUNENA_ANN_ANNOUNCEMENTS = "Közlemények"
 COM_KUNENA_A_GEN_NEWCHAR = "ÚJ"
 COM_KUNENA_BACK = "Vissza"
 COM_KUNENA_DELETE = "Törlés"
-COM_KUNENA_EDITOR_HELPLINE_OPTION = "Szavazás: szavazás opciója"
+COM_KUNENA_EDITOR_HELPLINE_OPTION = "Szavazás: szavazási lehetőség"
 COM_KUNENA_ERROR_SESSION_SAVE_FAILED = "Kunena: munkamenet információ mentése sikertelen!"
 COM_KUNENA_GEN_MODERATED = "Moderált fórum, a hozzászólások jóváhagyása szükséges."
 COM_KUNENA_MANAGE_ATTACHMENTS = "Mellékletkezelő"
 COM_KUNENA_MYPROFILE_GENDER_FEMALE = "Nő"
 COM_KUNENA_MYPROFILE_GENDER_MALE = "Férfi"
 COM_KUNENA_MYPROFILE_GENDER_UNKNOWN = "Nincs adat"
-COM_KUNENA_PMS_INBOX_NEW = "Új Privát Üzenetek: %s"
+COM_KUNENA_PMS_INBOX_NEW = "Új magán üzenetek: %s"
 COM_KUNENA_POST_LOCK_SET = "Téma zárolva."
-COM_KUNENA_SEARCH_ADVSEARCH = "Részletes Keresés"
+COM_KUNENA_SEARCH_ADVSEARCH = "Részletes keresés"
 COM_KUNENA_SEARCH_SORTBY_VIEWS = "Megjelenések száma"
 COM_KUNENA_TOGGLER_COLLAPSE = "Összecsuk"
 COM_KUNENA_TOGGLER_EXPAND = "Kinyit"
@@ -249,8 +249,8 @@ COM_KUNENA_ALERT_ERROR_X = "Hiba: %s"
 COM_KUNENA_ALERT_SUCCESS_X = "Sikeres: %s"
 COM_KUNENA_ALERT_INFO_X = "Infó: %s"
 
-COM_KUNENA_LIB_TIME_NOW = "Csak most"
-COM_KUNENA_LIB_TIME_AGO = "%s"
+COM_KUNENA_LIB_TIME_NOW = "Épp most"
+COM_KUNENA_LIB_TIME_AGO = "%s ezelőtt"
 COM_KUNENA_MYPROFILE_LASTLOGIN = "Utolsó belépés"
 COM_KUNENA_VIEW_BLOCKED = "Blokkolt"
 COM_KUNENA_RANK_BLOCKED = "Felhasználó blokkolva"
@@ -273,7 +273,7 @@ COM_KUNENA_INVISIBLE = "Láthatatlan"
 COM_KUNENA_OFFLINE = "Nem elérhető"
 COM_KUNENA_UNKNOWN_STATUS = "Ismeretlen állapot"
 COM_KUNENA_STATUS_TOOLONG = "Az állapotszöveg túl hosszú."
-COM_KUNENA_STATUS_SAVED = "Az állapotszöveg mentése sikeresen megtörtént."
+COM_KUNENA_STATUS_SAVED = "Állapotszöveg mentése sikeresen megtörtént."
 COM_KUNENA_STATUS_MESSAGE = "Állapotszöveg beállítása"
 COM_KUNENA_STATUS_TYP = "\nÍrd be az üzented"
 COM_KUNENA_UPLOAD_ATTACHMENT_FILE_WEIGHT_MB = "MB"
@@ -286,8 +286,8 @@ COM_KUNENA_STATUS="Állapotszöveg"
 COM_KUNENA_MESSAGE_CREATED="létrehozta a témát:"
 COM_KUNENA_MESSAGE_REPLIED="válaszolt a témára:"
 COM_KUNENA_GEN_GUEST="<strong>INFÓ</strong>: Vendégként küldöd az üzenetet"
-; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
+COM_KUNENA_META_PROFILE="%s elérhető itt: %s. %s eléréséhez, csatlakozz ehhez: %s"
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil mentése nem sikerült"
 COM_KUNENA_PROFILE_SAVE_ERROR="Hiba a profil metése közben"
-
+COM_KUNENA_THANKYOU_MORE_USERS = "és ez a felhasználó %s további személytől kapott köszönetet"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="A téma beavatkozást igényel"
