--- a/components/com_kunena/site/language/kz-KZ/kz-KZ.com_kunena.ini
+++ b/components/com_kunena/site/language/kz-KZ/kz-KZ.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Бақылау панелі"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Санаттар менеджері"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Менеджер санатына енгізіңіз"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Барлық тақырыптар оқылған "
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Бұл санаттағы барлық тақырыптарды оқлған деп белгілеу."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Жазылу"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Осы санатқа жазылу."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Жазылуды тоқтату"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Тосқауылдар тарихы"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
