--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Panel kontrolny"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Zarządzaj kategoriami"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Wejdź do menedżera kategorii."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Oznacz jako przeczytane"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Oznacz wątki w tej kategorii jako przeczytane."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Subskrybuj"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Subskrybuj tę kategorię."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Usuń subskrypcję"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>UWAGA</strong>: piszesz w tym temacie jako 'Gość
 COM_KUNENA_META_PROFILE="%s jest na %s. Aby połączyć się z %s, dołącz %s dzisiaj."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
