--- a/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.ini
+++ b/components/com_kunena/site/language/pt-BR/pt-BR.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Painel de Controle"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Gerenciar Categorias"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Entrar no Gerenciador de Categorias"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Marcar Tópicos como Lidos"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Marcar todos os tópicos desta categoria como lidos."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Assinar"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Assinar esta categoria."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Desassinar"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Histórico de Banimentos"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
