--- a/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.ini
+++ b/components/com_kunena/site/language/sk-SK/sk-SK.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrolný panel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Manažovať kategórie"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Vstúpte do manažéra kategórií."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Označiť témy ako prečítané"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Označiť všetky témy v tejto kategórii ako prečítané."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Odoberať"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Odoberať túto kategóriu."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Neodoberať"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: Odosielate správu ako 'Hosť'"
 COM_KUNENA_META_PROFILE="%s je na %s. Pre pripojenie s %s, zdieľajte %s ešte dnes."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil nebol uložený"
 COM_KUNENA_PROFILE_SAVE_ERROR="Chyba pri ukladaní profilu"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Témy vyžadujúce si pozornosť"
