--- a/components/com_kunena/site/language/sl-SI/sl-SI.com_kunena.ini
+++ b/components/com_kunena/site/language/sl-SI/sl-SI.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Nadzorna plošča"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Upravljaj kategorije"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Vstopi v upravljanje kategorije."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Označi teme kot prebrane"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Označi vse teme v kategoriji kot prebrane."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Naroči se"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Naroči se tej kategoriji."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Odnaroči se"
@@ -289,5 +289,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: To sporočilo objavljate kot 'Gost'
 COM_KUNENA_META_PROFILE="%s je na %s. Povežite se z %s, Pridružite se %s danes."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
