--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Kontrol Paneli"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Kategorileri Yönet"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Kategori Yöneticisine gir"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Başlıkları Okundu Kabul Et"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Bu kategorideki tüm konuları okundu olarak işaretle"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Abone Ol"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Bu kategoriye abone ol"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Abonelikten Çık"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Yasaklama Geçmişi"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
