--- a/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.ini
+++ b/components/com_kunena/site/language/vi-VN/vi-VN.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Bảng quản lý chức năng"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Quản lý các Chuyên mục"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Truy cập vào Quản lý Chuyên mục."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Đánh dấu chủ đề đã đọc"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Đánh dấu mọi chủ đề trong chuyên mục này là đã đọc."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Theo dõi chuyên mục"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Tham gia chuyên mục này."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Ngừng gửi E-mail cho bạn đối với chủ đề này."
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Lịch sử lệnh cấm"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
