--- a/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.ini
+++ b/components/com_kunena/site/language/zh-CN/zh-CN.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "控制面板"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "管理版块"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "进入版块管理"
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "标记为已读"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "标记所有已读"
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "订阅"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "订阅该版块"
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "取消订阅"
@@ -289,5 +289,5 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="禁用历史"
 ; COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 ; COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 ; COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
-
+; COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 ; COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
